outsourced assistant chapters to includes

--- a/docs/de-de/modules/webshop/pages/ceres-einrichten.adoc
+++ b/docs/de-de/modules/webshop/pages/ceres-einrichten.adoc
@@ -25,89 +25,19 @@ Das Plugin *plentyShop LTS* beinhaltet das Standard-Design des Shops und kann na
 
 include::_includes:partial$rights.adoc[]
 
+
+
+
 [#integrations-assistent]
 === Integrationenassistent
 
-Der Integrationenassistent installiert für dich die beiden Plugins plentyShop LTS und IO. Du kannst darüber auch die Zahlungsanbieter und Versanddienstleister installieren, die du für plentyShop verwenden willst. Gehe wie folgt vor, um plentyShop LTS und IO zu installieren:
-
-[.instruction]
-Integrationenassistenten durchlaufen:
-
-. Öffne das Menü *Einrichtung » Assistenten » Grundeinrichtung » Integrationen*.
-. Aktiviere im Schritt **Online-Shops** die Option **plentyShop LTS installieren**.
-. Aktiviere ggf. Zahlunsanbieter und Versanddienstleister, deren Dienste du nutzen möchtest.
-. Wähle im Schritt **Informationen zur Installation** das **Plugin-Set**, in dem du die Plugins installieren möchtest.
-. Klicke im Schritt **Zusammenfassung** auf **Abschließen**. +
-→ plentyShop LTS, IO und ggf. weitere Zahlungs- und Versand-Plugins werden geladen und installiert.
-
-[WARNING]
-.Assistent mit ähnlichem Namen
-====
-Es gibt neben dem Integrationenassistent den ähnlich benannten Bereich **Einrichtung » Assistenten » Integration**, in dem bspw. der Assistent für Versandeinstellungen liegt. Achte darauf, dass du den Integrationenassistent unter **Grundeinrichtung** durchläufst, um die Plugins zu installieren.
-====
+include::partial$lts-integration-assistant.adoc[]
 
 [#plentyshop-assistent]
 === plentyShop LTS Assistent
 
-Der plentyShop LTS-Assistent führt dich bequem durch die Grundeinrichtung deines plentyShops. Du musst nicht alle Einstellungen sofort treffen. Im Schritt *Auswahl der Einstellungen* kannst du Einstellungsbereiche ausblenden, um möglichst schnell einen funktionierenden plentyShop aufzusetzen.
+include::partial$lts-assistant.adoc[]
 
-[.instruction]
-plentyShop LTS-Assistenten durchlaufen:
-
-. Öffne das Menü *Einrichtung » Assistenten » Plugins » (Plugin-Set wählen) » plentyShop LTS » (Mandant wählen)*.
-. Aktiviere im Schritt *Auswahl der Einstellungen* die Bereiche, für die du Einstellungen vornehmen willst.
-. Nimm die gewünschten Einstellungen im jeweiligen Bereich vor.
-. Klicke auf *Weiter*, um den nächsten Einstellungsbereich zu öffnen.
-. Klicke im Schritt **Zusammenfassung** auf **Abschließen**. +
-→ Die Einstellungen werden gespeichert.
-
-[#plentyshop-assistent-standardeinstellungen]
-==== Standardeinstellungen im plentyShop LTS-Assistenten
-
-Damit dein plentyShop funktioniert, musst du bestimmte Standardeinstellungen vornehmen. Diese sind: +
-
-- Standardsprache
-- Standardversandart
-- Standardversandprofil
-- Standardzahlungsart
-- Standardlieferland
-- Standardkundenklasse für B2C-Kund:innen
-- Standardkundenklasse für B2B-Kund:innen
-- Standardstandort
-
-Diese Einstellungen sind im ersten Schritt des Assistenten gebündelt. Falls du noch keine Versand- oder Zahlungsart im System hinterlegt hast, leitet dich der Assistent auf einen weiteren Assistenten, der dir mit der Einrichtung hilft. Wenn du für jede Standardeinstellung mindestens eine Option im System hinterlegt hast, kannst du den plentyShop LTS-Assistenten weiter durchlaufen. 
-
-[[tabelle-assistent-standardeinstellungen]]
-.Standardeinstellungen im Assistenten vornehmen
-[cols="1,3"]
-|====
-|Einstellung |Erläuterung
-
-| *Standardsprache*
-| Wähle die Sprache, die Kund:innen im plentyShop standarmäßig angezeigt wird. 
-
-| *Standardversandart*
-| Wähle eine Versandart, die für Kund:innen automatisch vorausgewählt ist. Diese Versandart wird für die Berechnung der Versandkosten im Warenkorb verwendet, bevor sich Kund:innen im plentyShop registrieren. Die Standardversandart ist in der Kaufabwicklung vorausgewählt.
-
-| *Standardversandprofil*
-| Wähle ein Versandprofil, das für Kund:innen automatisch vorausgewählt ist. 
-
-| *Standardzahlungsart*
-| Wähle eine Zahlungsart, die für Kund:innen automatisch vorausgewählt ist. Du kannst ausschließlich link:https://marketplace.plentymarkets.com/plugins/payment[Plugin-Zahlungsarten^] in *plentyShop LTS* verwenden. Zahlungsarten stehen nach ihrer Einrichtung als Standardzahlungsart zur Verfügung. Beachte bei der Einrichtung der Zahlungsarten-Plugins die jeweiligen *User Guides* auf plentyMarketplace.
-
-| *Standardlieferland*
-| Wähle pro Sprache ein Lieferland, das für Kund:innen automatisch vorausgewählt ist. Beim Wechsel der Sprache im plentyShop wechselt automatisch das Lieferland im Header und in der Kaufabwicklung.
-
-| *Standardkundenklasse für B2C-Kund:innen*
-| Wähle die Kundenklasse, die für Privatkund:innen vorausgewählt ist.
-
-| *Standardkundenklasse für B2B-Kund:innen*
-| Wähle die Kundenklasse, die für Geschäftskund:innen vorausgewählt ist.
-
-| *Standardstandort*
-| Wähle den Standort, der standardmäßig vorausgewählt ist.
-
-|====
 
 [#300]
 === Rechtliche Angaben speichern
