--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -547,6 +547,40 @@ include::partial$recommendation-text.adoc[]
 include::partial$kaufland-recommended-mappings.adoc[]
 --
 
+[#besonderheiten-kaufland-kataloge]
+==== Besonderheiten bei der Zuordnung von Datenfeldern
+
+Jeder Marktplatz strukturiert Artikeldaten anders. Deshalb treten beim Zuordnen von Datenfeldern bestimmte Sonderfälle auf. In diesem Kapitel findest du Hinweise dazu, was du beim Zuordnen von Datenfeldern für Kaufland beachten solltest.
+
+[#groesseneinheit-kaufland]
+===== Größeneinheit als eigenen Wert für Länge, Breite und Höhe angeben
+
+In vielen Kaufland-Katalogen sind die Datenfelder *Länge*, *Breite* und *Höhe* Pflichtfelder und müssen zugeordnet werden. Dafür empfehlen wir folgende Zuordnungen:
+
+* *Länge*: *Variante » Länge*, _Größeneinheit angeben_
+* *Breite*: *Variante » Breite*, _Größeneinheit angeben_
+* *Höhe*: *Variante » Höhe*, _Größeneinheit angeben_
+
+Bei diesen Datenfeldern wird nur der Wert und nicht die Größeneinheit zu Kaufland übertragen. Damit deine Varianten fehlerfrei zu Kaufland exportiert werden können, muss jedoch die Größeneinheit angegeben werden. Deshalb solltest du die Größeneinheit zusätzlich als *eigenen Wert* angeben. +
+Im Folgenden wird beispielhaft beschrieben, wie du die Größeneinheit als eigenen Wert für das Datenfeld *Länge* angibst.
+
+[.instruction]
+Größeneinheit als eigenen Wert angeben:
+
+. Öffne das Menü *Daten » Kataloge*.
+. Öffne den Kaufland-Katalog.
+. Ordne dem Kaufland-Datenfeld *Länge* den Wert *Variante » Länge* zu.
+. Klicke auf *Datenfeld hinzufügen* (material:insert_link[]). +
+→ Ein weiteres Datenfeld wird hinzugefügt.
+. Gib die Größeneinheit im Datenfeld *Eigener Wert* ein. +
+→ Die Größeneinheit kannst du zum Beispiel als *mm*, *cm*, oder *m* angeben, je nachdem, welche Größeneinheit du übertragen willst.
+. Klicke in dem Datenfeld auf *Einstellungen* (material:settings[]). +
+→ Das Fenster *Einstellungen Datenspalten* wird geöffnet. In diesem Fenster konfigurierst du das Trennzeichen.
+. Wähle *Null* als *Ausweichbedingung*.
+. Wähle *Leerzeichen* als *Trennzeichen*.
+. *Speichere* die Einstellungen.
+. Wiederhole diese Schritte für die Datenfelder *Breite* und *Höhe*.
+
 [#activate-catalogue]
 ==== Katalogexport aktivieren
 
