ADJUST voucher info

--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -950,7 +950,7 @@ Im Bereich *Dokumente* siehst du alle vorhandenen sowie archivierten Dokumente d
 [NOTE]
 .Gutschein-Dokumente
 ======
-Bei Dokumenten vom Typ *Gutschein* handelt es sich nicht um Gutscheine, die im Auftrag eingelöst wurden, sondern um Gutscheine, die mit diesem Auftrag verkauft wurden. Über das Kontextmenü (material:more_vert[]) kann ein Gutschein mit Klick auf *Neu erzeugen* (material:restore_page[]) neu erzeugt werden.
+Hast du verkaufte Gutscheine oder Vouchers, werden diese ebenfalls in den Dokumenten angezeigt. Bei Dokumenten vom Typ *Gutschein* handelt es sich also nicht um Gutscheine, die im Auftrag eingelöst wurden, sondern um Gutscheine, die mit diesem Auftrag verkauft wurden. Über das Kontextmenü (material:more_vert[]) kann ein Gutschein mit Klick auf *Neu erzeugen* (material:restore_page[]) neu erzeugt werden.
 ======
 
 [#area-history]
