--- a/docs/de-de/modules/business-entscheidungen/pages/managing-key-figures.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/managing-key-figures.adoc
@@ -6,16 +6,15 @@
 
 Im Online-Handel kommt es darauf an, konkurrenzfähig zu bleiben und das Wachstum deines Geschäfts zu ermöglichen. Damit du dein Business optimal ausrichten und fundierte Entscheidungen treffen kannst, benötigst du Einblick in möglichst aktuelle Daten und individuelle Statistiken.
 
-Dazu kannst du in plentymarkets so genannte Kennzahlen nutzen. In Kombination mit dem xref:business-entscheidungen:myview-dashboard.adoc#[Dashboard] kannst du diese Daten visualisieren und hast alle für dich relevanten Informationen jederzeit im Blick.
+Dazu kannst du in plentymarkets so genannte Kennzahlen anlegen. In Kombination mit dem xref:business-entscheidungen:myview-dashboard.adoc#[Dashboard] kannst du diese Daten visualisieren und hast alle für dich relevanten Informationen jederzeit im Blick.
 
 Auf dieser Handbuchseite erfährst du
 
 * <<#100, was genau Kennzahlen sind>>
 * <<#200, welche plentyBI Edition du benötigst>>
 * <<#300, wie du die notwendigen Berechtigungen für Nutzer:innen vergibst>>
-* <<#400, wie du Kennzahlen anlegst>>
-* <<#500, wie du Kennzahlen verwaltest>> und
-* <<#600, wie du externe Kennzahlen nutzt>>.
+* <<#400, wie du Kennzahlen anlegst>> und
+* <<#500, wie du Kennzahlen verwaltest>>.
 
 [#100]
 == Was sind Kennzahlen?
@@ -31,6 +30,7 @@ Um konkrete Daten und Werte auf einem xref:business-entscheidungen:myview-dashbo
 
 Zuerst solltest du entscheiden, welche Daten du auswerten möchtest. 
 
+[#210]
 [TIP]
 .Standard-Kennzahlen verfügbar
 ====
@@ -47,7 +47,9 @@ Das bedeutet, dass sie in deinem plentymarkets System bereits mit einigen Vorein
 
 Um weitere Kennzahlen anzulegen, musst du zuvor die passende plentyBI Edition buchen. 
 
-Klicke auf die Links auf unserer xref:business-entscheidungen.kennzahlen.adoc#[Übersichtsseite], um pro Kennzahl zu erfahren, welche Daten geliefert werden und welche plentyBI Edition benötigt wird. Außerdem wird im Menü *Einrichtung » plentyBI » Kennzahlen* für jede Kennzahl angezeigt, in welcher plentyBI Edition sie enthalten sind.
+Klicke auf die Links auf unserer xref:business-entscheidungen.kennzahlen.adoc#[Übersichtsseite], um pro Kennzahl zu erfahren, welche Daten geliefert werden. Klicke im Menü *Einrichtung » plentyBI » Kennzahlen* auf *Neu*. In der Dropdown-Liste wird für jede Kennzahl angezeigt, in welcher plentyBI Edition sie enthalten sind.
+
+Entscheide, welche Kennzahlen du benötigst und buche anschließend eine plentyBI Edition.
 
 [.instruction]
 plentyBI Edition buchen:
@@ -87,7 +89,7 @@ Berechtigungen zur Ansicht von Kennzahlen erteilen:
 *_Optional:_* Klicke auf *Alle Kennzahlen*, wenn sämtliche Kennzahlen für das Benutzerkonto sichtbar sein sollen.
 . *Speichere* (terra:save[]) die Einstellungen.
 
-Sollen Mitarbeiter:innen ohne Admin-Zugang Kennzahlen anzulegen? Dann nimm zusätzlich noch die folgenden Einstellungen vor.
+Sollen Mitarbeiter:innen ohne Admin-Zugang Kennzahlen anlegen, bearbeiten oder löschen? Dann nimm zusätzlich noch die folgenden Einstellungen vor.
 
 [discrete]
 ==== Rechte für Backend-Benutzer:innen vergeben
@@ -110,7 +112,7 @@ Kennzahlen anlegen:
 . Öffne das Menü *Einrichtung » plentyBI » Kennzahlen*.
 . Klicke auf *Neu* (material:add[role="skyBlue"]).
 . Nimm die Einstellungen gemäß <<table-create-key-figures>> vor.
-. Speichere (terra:save[]) die Einstellungen.
+. *Speichere* (terra:save[]) die Einstellungen.
 
 [[table-create-key-figures]]
 .Kennzahlen anlegen
@@ -121,7 +123,7 @@ Kennzahlen anlegen:
 
 2+^| Bereich *Allgemein*
 
-| *Name*
+| [#intable-name]*Name*
 | Gib einen Namen für die Kennzahl an.
 
 | [#intable-keyfigure]*Kennzahl*
@@ -138,15 +140,15 @@ Kennzahlen anlegen:
 | *Erstellt*
 | Zeitpunkt der Erstellung der Kennzahlkonfiguration. Den Zeitpunkt kannst du nicht bearbeiten.
 
-| *Ersteller* 
+| [#intable-creator]*Ersteller* 
 | Benutzername der Ersteller:in der Kennzahlkonfiguration. Klicke auf die Schaltfläche neben dem Schloss-Symbol (material:toggle_on[role="skyBlue"]) um die Kennzahlkonfiguration zu sperren. So kann nur der Benutzer, der die Konfiguration erstellt hat, Änderungen an der Kennzahl vornehmen.
 
-2+^| Bereich *Kommentar*
+2+^| Bereich [#intable-comment]*Kommentar*
 
 | *Kommentar*
 | Gib hier bei Bedarf einen Kommentar zur Kennzahl ein. Der Kommentar wird an der Kennzahl gespeichert und gibt dir und deinen Mitarbeiter:innen schnell Einblick in eventuelle Besonderheiten oder Vermerke für die Kennzahl. Der Kommentar wird lediglich in diesem Menü angezeigt.
 
-2+^| Bereich *Filter*
+2+^| Bereich [#intable-filter]*Filter*
 
 | *Filter*
 | Nachdem du eine <<#intable-keyfigure, Kennzahl>> ausgewählt hast, kannst du hier festlegen, wie die Daten gefiltert werden sollen. Die Filter, die pro Kennzahl zur Verfügung stehen, sind auf der jeweiligen xref:business-entscheidungen:kennzahlen.adoc#[Handbuchseite der Kennzahl] beschrieben. +
@@ -172,8 +174,9 @@ Nachdem du im Menü *Einrichtung » plentyBI » Kennzahlen* einige Kennzahlen an
 Die folgenden Kapitel beschreiben, wie du
 
 * <<#510, die Kennzahlen-Übersicht gestaltest>>
-* <<#520, nach Kennzahlen suchst>> und
-* <<#530, die Gruppenfunktion nutzt>>.
+* <<#520, nach Kennzahlen suchst>>
+* <<#530, Kennzahlen bearbeitest>> und
+* <<#540, die Gruppenfunktion nutzt>>.
 
 [#510]
 === Kennzahlen-Übersicht gestalten
@@ -188,7 +191,7 @@ Kennzahlen-Übersicht gestalten:
 . Nimm die Einstellungen vor. Beachte die Informationen in <<table-columns-setup>>.
 
 [[table-columns-setup]]
-.Kennzahlen-Übersicht gestalten
+.Optionen zur Gestaltung der Kennzahlen-Übersicht
 [width="100%"]
 [cols="1,3"]
 |====
@@ -214,15 +217,51 @@ Kennzahlen-Übersicht gestalten:
 [#520]
 === Kennzahlen suchen
 
-//TODO
+Die Kennzahlen, die in deinem System angelegt wurden, werden im Menü *Einrichtung » plentyBI » Kennzahlen* aufgelistet. Vor allem wenn du für eine Kennzahl mehrere Konfigurationen anlegst, kann die Übersicht schnell verloren gehen.
+
+Gehe wie unten beschrieben vor, um nach Kennzahlen zu suchen.
+
+[.instruction]
+Kennzahlen suchen:
+
+. Öffne das Menü *Einrichtung » plentyBI » Kennzahlen*.
+. Klicke auf *Filter* (material:tune[role="darkGrey"]).
+. Wähle die Kennzahl aus der Dropdown-Liste, nach der du suchen möchtest.
+. Klicke auf *SUCHEN*. +
+→ Die Konfigurationen der gewählten Kennzahl werden angezeigt.
 
 [#530]
+=== Kennzahlen bearbeiten
+
+Bei Bedarf kannst du bereits angelegte Kennzahlen bearbeiten. Beachte jedoch, dass nicht alle Einstellungen bearbeitbar sind.
+
+[IMPORTANT]
+.Berechtigungen beachten
+====
+Stelle sicher, dass Personen ohne Admin-Zugang über die notwendigen <<#300, Berechtigungen>> verfügen, damit sie Kennzahlen bearbeiten können. Ist die Kennzahl <<#intable-creator, gesperrt>>? Dann kann die Kennzahl nur durch die Person bearbeitet werden, die sie ursprünglich erstellt hat.
+====
+
+[.instruction]
+Kennzahlen bearbeiten:
+
+. Öffne das Menü *Einrichtung » plentyBI » Kennzahlen*.
+. Klicke auf die Kennzahl, die du bearbeiten möchtest.
+. Nimm die gewünschten Änderungen vor. Du kannst den <<#intable-name, Namen>> der Kennzahl, die Berechnung, den <<#intable-comment, Kommentar>>, die <<#intable-filter, Filter>> und <<#intable-targetvalue, Zielwerte>> ändern.
+. *Speichere* (terra:save[]) die Einstellungen.
+
+[#540]
 === Gruppenfunktion nutzen
 
 Möchtest du mehrere Kennzahlen löschen oder die Daten der Kennzahlen neu berechnen? Dann nutze am Besten die Gruppenfunktion, um diese Aktionen auszuführen.
 
-[#530a]
+[#540a]
 ==== Kennzahlen löschen
+
+[IMPORTANT]
+.Berechtigungen beachten
+====
+Stelle sicher, dass Personen ohne Admin-Zugang über die notwendigen <<#300, Berechtigungen>> verfügen, damit sie Kennzahlen bearbeiten können.
+====
 
 Gehe wie unten beschrieben vor, um Kennzahlen zu löschen.
 
@@ -258,22 +297,6 @@ Kennzahlen neu berechnen:
 → Die Kennzahlen werden neu berechnet.
 
 [#600]
-== Externe Kennzahlen nutzen
+== Wie geht es weiter?
 
-////
-TODO: Einstellungen zum Import externer Kennzahlen aus Google Tabellen. Welche Berechtigungen? Welcher Login? PID- und nutzerbasierte Einschränkungen/Freigaben. Erklärungen der Optionen und Empfehlungen für Einstellungen, z.B. Datumsformat im Google Sheet
-////
-
-[IMPORTANT]
-.Voraussetzungen beachten
-====
-Stelle sicher, dass die folgenden Voraussetzungen erfüllt sind, *bevor* du die Funktion nutzt.
-
-* Du musst über ein Google-Konto verfügen und darin eingeloggt sein. Dies kann ein privates Konto sein oder ein Konto, das dir über deine Organisation zur Verfügung gestellt wird.
-
-* Im link:https://www.google.com/sheets/about/[Google Tabellen-Tool^] muss das Dokument, dessen Daten in plentymarkets importiert werden sollen, bereits erstellt sein. Stelle außerdem sicher, dass du entweder Eigentümer:in dieses Dokuments bist oder berechtigt bist, das Dokument samt Inhalten zu öffnen und anzuzeigen.
-====
-
-////
-TODO: #200 und #300 aus myview-dashboard.adoc entfernen. Verlinkungen anpassen. Seitentitel der Dashboard-Seite anpassen
-////
+Auf dieser Seite wurden die Grundfunktionen von Kennzahlen erläutert. Hast du die gewünschten Kennzahlen in deinem System angelegt und dich mit den <<#210, Standardkennzahlen>> vertraut gemacht? Dann kannst du damit beginnen, dein persönliches Dashboard einzurichten. Die Handbuchseite xref:business-entscheidungen:myview-dashboard.adoc[Dashboard einrichten] enthält alle Informationen die du brauchst, um deine Kennzahlen zu visualisieren.
