1st batch of changes

--- a/docs/de-de/modules/pos/pages/pos-einrichten.adoc
+++ b/docs/de-de/modules/pos/pages/pos-einrichten.adoc
@@ -52,7 +52,7 @@ Um plentyPOS verwenden zu können, link:https://www.plentymarkets.com/de/produkt
 
 Nachdem du Kassen gebucht hast, dauert es zunächst zwei bis drei Minuten, bis der Aktivierungsprozess im Hintergrund abgeschlossen ist. Logge dich dann aus deinem plentymarkets System aus und wieder ein. Dieser Schritt ist auch notwendig, wenn du bereits Kassen eingerichtet hast und im Nachhinein eine oder mehrere neue Kassen hinzubuchst.
 
-Anschließend richtest du die Kassen im plentymarkets Backend ein. Zunächst weist du die Kassen einem Mandanten zu, indem du die Kasse im Menü *Einrichtung » Mandant » [Mandant wählen] » POS* erstellst und weitere Einstellungen vornimmst. Gehe dazu wie unten beschrieben vor.
+Anschließend richtest du die Kassen im plentymarkets Backend ein. Zunächst weist du die Kassen einem Mandanten zu, indem du die Kasse im Menü *Einrichtung » POS » Mandant » [Mandant wählen\] » [POS wählen\]* erstellst und weitere Einstellungen vornimmst. Gehe dazu wie unten beschrieben vor.
 
 [WARNING]
 .POS-Einstellungen nicht im laufenden Betrieb ändern
@@ -68,7 +68,7 @@ Erstelle zunächst im plentymarkets Backend eine Kasse für den gewünschten Man
 [.instruction]
 Kasse für Mandanten erstellen:
 
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » POS*.
+. Öffne das Menü *Einrichtung » POS » Mandant » [Mandant wählen\]*.
 . Klicke auf *Neue Kasse*. +
 → Das Fenster *Neue Kasse* wird eingeblendet.
 . Gib einen Namen für die Kasse ein.
@@ -262,7 +262,7 @@ Gehe wie unten beschrieben vor, um Varianten als Favoriten zu speichern.
 [.instruction]
 Varianten als Favoriten speichern:
 
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » POS*.
+. Öffne das Menü *Einrichtung » POS » Mandant » [Mandant wählen\] » [POS wählen\]*.
 . Öffne die Kasse.
 . Wechsele in das Tab *Favoriten*.
 . Öffne das Tab *Variante hinzufügen*. +
@@ -286,7 +286,7 @@ Die Priorität der Favoriten legst du über die Pfeilsymbole des Tabs *Favoriten
 [.instruction]
 Reihenfolge der Favoriten ändern:
 
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » POS*.
+. Öffne das Menü *Einrichtung » POS » Mandant » [Mandant wählen\] » [POS wählen\]*.
 . Öffne die Kasse.
 . Öffne das Tab *Favoriten*. +
 → Die Liste der Varianten auf der Favoritenliste wird angezeigt.
@@ -302,7 +302,7 @@ Die Favoritenliste einer Kasse kann auf andere Kassen des Mandanten übertragen 
 [.instruction]
 Favoriten auf andere Kassen übertragen:
 
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » POS*.
+. Öffne das Menü *Einrichtung » POS » Mandant » [Mandant wählen\] » [POS wählen\]*.
 . Öffne die Kasse.
 . Öffne das Tab *Favoriten*. +
 → Die Liste der Varianten auf der Favoritenliste wird angezeigt.
@@ -335,7 +335,7 @@ Im Tab *Beleg* der Kasseneinstellungen bestimmst du die Daten, die auf Belegen a
 [.instruction]
 Belegvorlage bearbeiten:
 
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » POS*.
+. Öffne das Menü *Einrichtung » POS » Mandant » [Mandant wählen\] » [POS wählen\]*.
 . Öffne die Kasse.
 . Wechsele in das Tab *Beleg*.
 . Aktiviere die Komponenten, die auf Belegen der Kasse angezeigt werden sollen.
@@ -663,7 +663,7 @@ Beachte auch, dass Zahlungsarten in einem weiteren Schritt für Kundenklassen er
 [TIP]
 .Zahlungsart Barverkauf/EC-Karte
 ====
-Stelle für die Zahlungsart *11 » Barverkauf/EC-Karte* außerdem im Menü *Einrichtung » Mandant » [Mandant wählen] » POS  » [Kasse öffnen] » Tab: Zahlungsart* die Option *Ohne Anbindung* im Bereich *EC-Terminal* ein.
+Stelle für die Zahlungsart *11 » Barverkauf/EC-Karte* außerdem im Menü *Einrichtung » POS » Mandant » [Mandant wählen\] » [POS wählen\] » Tab: Zahlungsart* die Option *Ohne Anbindung* im Bereich *EC-Terminal* ein.
 ====
 
 [#1070]
