--- a/docs/de-de/modules/daten/partials/order-referrers.adoc
+++ b/docs/de-de/modules/daten/partials/order-referrers.adoc
@@ -132,6 +132,9 @@ Die Auftragsherkunft zeigt an, auf welchem Verkaufskanal ein Auftrag erzeugt wur
 |4.14
 |Amazon Amazon United Arab Emirates (U.A.E.)
 
+|4.15
+|Amazon Belgium
+
 |4.21
 |Amazon Germany B2B
 
@@ -162,10 +165,8 @@ Die Auftragsherkunft zeigt an, auf welchem Verkaufskanal ein Auftrag erzeugt wur
 |15
 |Etsy
 
-////
 |16
 |limango
-////
 
 |101
 |ricardo
