Added note about launch of Amazon Belgium

--- a/docs/de-de/modules/daten/partials/order-referrers.adoc
+++ b/docs/de-de/modules/daten/partials/order-referrers.adoc
@@ -133,7 +133,8 @@ Die Auftragsherkunft zeigt an, auf welchem Verkaufskanal ein Auftrag erzeugt wur
 |Amazon Amazon United Arab Emirates (U.A.E.)
 
 |4.15
-|Amazon Belgium
+|Amazon Belgium +
+*_Hinweis:_* Diese Auftragsherkunft hat momentan noch keine Funktion, da der Marktplatz von Amazon noch nicht eröffnet wurde.
 
 |4.21
 |Amazon Germany B2B
