--- a/docs/en-gb/modules/data/partials/order-referrers.adoc
+++ b/docs/en-gb/modules/data/partials/order-referrers.adoc
@@ -133,7 +133,8 @@ An order referrer tags an order with the sales channel on which the order was ge
 |Amazon Amazon United Arab Emirates (U.A.E.)
 
 |4.15
-|Amazon Belgium
+|Amazon Belgium +
+*_Note:_* This order referrer is currently without function, as the market has not been launched by Amazon yet.
 
 |4.21
 |Amazon Germany B2B
