Add info about Amazon Prime services

--- a/docs/de-de/modules/maerkte/pages/amazon-prime-auftraege.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-prime-auftraege.adoc
@@ -40,10 +40,11 @@ Amazon schreibt vor, dass du Versandetiketten für Amazon Prime-Aufträge über 
 Versandprofile mit Amazon Prime verknüpfen:
 
 . Öffne das Menü *Einrichtung » Aufträge » Versand » Optionen » Tab: Versandprofile*.
-. Wähle das Versandprofil, das du mit Amazon Prime verknüpfen möchtest.
+. Wähle das Versandprofil, das du mit Amazon Prime verknüpfen möchtest. 
 . Wähle den Filter *Amazon Prime* im Bereich *Treueprogramm*.
-. Wechsele in das Tab *Portotabelle*.
-. Wähle bei der Option *Amazon Prime Service* im Bereich *Amazon Prime* die Versandart.
+. Wechsele in das Tab *Portotabelle*. 
+. Wähle bei der Option *Amazon Prime Service* im Bereich *Amazon Prime* die Versandart. +
+→ *_Wichtig:_* Du kannst den Bereich *Amazon Prime* hier nur sehen, wenn du den Versanddienstleister DHL oder DPD wählst.
 . Speichere (terra:save[]) die Einstellungen.
 
 [TIP]
