--- a/docs/en-gb/modules/markets/pages/amazon-prime-orders.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-prime-orders.adoc
@@ -42,7 +42,8 @@ Linking shipping profiles with Amazon Prime:
 . Select the shipping profile that you want to link with Amazon Prime.
 . In the *Loyalty program* area, select the filter *Amazon Prime*.
 . Click on the *Table of shipping charges* tab.
-. In the *Amazon Prime* area, select the shipping method for the *Amazon Prime Service* option.
+. In the *Amazon Prime* area, select the shipping method for the *Amazon Prime Service* option. +
+→ *_Important:_* You will only see the *Amazon Prime* area here if you select shipping provider DHL or DPD. This does _not_ refer to the plugins DHL Shipping and DPD Shipping.
 . Save (terra:save[]) the settings.
 
 [TIP]
