--- a/docs/de-de/modules/fulfillment/pages/versand-vorbereiten.adoc
+++ b/docs/de-de/modules/fulfillment/pages/versand-vorbereiten.adoc
@@ -691,7 +691,8 @@ Wenn du die Option *Übertragen, falls verfügbar, andernfalls Alternative über
 2+^|Versanddienstleisterspezifische Einstellungen
 
 2+^| *_Hinweis:_* Für einige Versanddienstleister werden an dieser Stelle in deinem plentymarkets Backend spezifische Einstellungen sichtbar, nachdem du die Portotabelle gespeichert und neu geladen hast. +
-Beispiel: *Amazon Versandeinstellungen*; hier kannst du einen Transportservice und einen Versandservice wählen.
+Beispiel: *Amazon Prime*. Hier kannst du einen Amazon Prime-Service wählen. Diese Services sind nur sichtbar, wenn du vorher das Versandprofil mit dem Versanddienstleister DHL oder DPD erstellt hast. Dies betrifft _nicht_ die Plugins DHL Shipping (Versenden) und DPD Versand-Services. +
+Beispiel: *Amazon Versandeinstellungen*. Hier kannst du einen Transportservice und einen Versandservice wählen.
 
 |====
 
@@ -2943,4 +2944,6 @@ Datenübergabe zu iLOPACK einrichten:
 
 == Amazon Prime
 
-Du hast in plentymarkets die Möglichkeit, Filter einzustellen, damit Aufträge mit den Versandbedingungen von Amazon Prime gesondert behandelt werden. Außerdem kannst du Versandlabel für Amazon Prime-Aufträge über die Amazon Merchant Fulfillment API generieren. Welche Einstellungen du vornehmen musst, ist auf der Handbuchseite xref:maerkte:amazon-prime-auftraege-bearbeiten.adoc#[Amazon Prime-Aufträge bearbeiten] beschrieben.
+Du hast in plentymarkets die Möglichkeit, Filter einzustellen, damit Aufträge mit den Versandbedingungen von Amazon Prime gesondert behandelt werden. Außerdem kannst du Versandlabels für Amazon Prime-Aufträge über die Amazon Merchant Fulfillment API generieren. Welche Einstellungen du vornehmen musst, ist auf der Handbuchseite xref:maerkte:amazon-prime-auftraege-bearbeiten.adoc#[Amazon Prime-Aufträge bearbeiten] beschrieben. 
+
+Beachte, dass du im Tab *Portotabelle* des Versandprofils den Bereich *Amazon Prime* nur sehen kannst, wenn das Versandprofil mit dem Versanddienstleister DHL oder DPD erstellt wurde. Dies betrifft _nicht_ die Plugins DHL Shipping (Versenden) und DPD Versand-Services.
