--- a/docs/en-gb/modules/fulfilment/pages/preparing-the-shipment.adoc
+++ b/docs/en-gb/modules/fulfilment/pages/preparing-the-shipment.adoc
@@ -690,7 +690,8 @@ If you select the option *Transfer if available, otherwise transfer alternative*
 2+^|Specific settings of the shipping service provider
 
 2+^| *_Note:_* For some of the shipping service providers, specific settings become visible in this area of your plentymarkets back end after you saved and reloaded the table of shipping charges. +
-Example: *Amazon shipping settings*; here, you can select a transport service and a shipping service.
+Example: *Amazon Prime*. Here, you can select an Amazon Prime service. These services are only visible when you have created the shipping profile with shipping service provider DHL or DPD previously. This does _not_ refer to the plugins DHL Shipping and DPD Shipping. +
+Example: *Amazon shipping settings*. Here, you can select a transport service and a shipping service.
 
 |====
 
@@ -2945,3 +2946,5 @@ Setting up data transfer to iLOPACK:
 == Amazon Prime
 
 Use filters to make sure that orders with shipping conditions for Amazon Prime are separately treated in plentymarkets. Furthermore, you can create shipping labels for Amazon Prime orders via the Amazon Merchant Fulfilment API. For further information, refer to the xref:markets:amazon-prime-orders.adoc#[Processing Amazon Prime orders] page.
+
+Note that you can only see the *Amazon Prime* area in tab *Table of shipping charges* of the shipping profile when the shipping profile has been created with shipping service provider DHL or DPD. This does _not_ refer to the plugins DHL Shipping and DPD Shipping.
