--- a/docs/en-gb/modules/markets/pages/amazon-prime-orders.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-prime-orders.adoc
@@ -43,7 +43,7 @@ Linking shipping profiles with Amazon Prime:
 . In the *Loyalty program* area, select the filter *Amazon Prime*.
 . Click on the *Table of shipping charges* tab.
 . In the *Amazon Prime* area, select the shipping method for the *Amazon Prime Service* option. +
-→ *_Important:_* You will only see the *Amazon Prime* area here if you select shipping provider DHL or DPD. This does _not_ refer to the plugins DHL Shipping and DPD Shipping.
+→ *_Important:_* You will only see the *Amazon Prime* area here if you select shipping service provider DHL or DPD. This does _not_ refer to the plugins DHL Shipping and DPD Shipping.
 . Save (terra:save[]) the settings.
 
 [TIP]
@@ -52,7 +52,7 @@ Linking shipping profiles with Amazon Prime:
 Pay attention to the shipping package saved for the shipping profile to prevent overpriced labelling.
 ====
 
-Afterwards, register your Amazon Prime orders for the Amazon shipping provider that you have selected. To do so, go to *Orders » Shipping centre » Tab: Register*. You have to search for Amazon Prime orders in the *Search* tab before you can register them. The orders that were found are displayed here.
+Afterwards, register your Amazon Prime orders for the Amazon shipping service provider that you have selected. To do so, go to *Orders » Shipping centre » Tab: Register*. You have to search for Amazon Prime orders in the *Search* tab before you can register them. The orders that were found are displayed here.
 
 [TIP]
 .Tip: Pay attention to the shipping service provider
