feat: add shopify docs

--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -356,6 +356,9 @@
 *** xref:online-store:images-sizes.adoc[Image sizes in plentyShop LTS]
 *** xref:online-store:template-variables-in-ceres.adoc[ElasticSearch result fields]
 ** xref:online-store:setting-up-online-store.adoc[Old: Setting up Callisto online store]
+* External online stores
+* xref:external-online-shops:shopify-app.adoc[Shopify: App]
+* xref:external-online-shops:shopify-plugin.adoc[Shopify: Plugin]
 * xref:markets:markets.adoc[Markets and price search engines]
 ** xref:markets:price-search-engines.adoc[Price search engines]
 *** xref:markets:basic-price-search-engine.adoc[Basic Price Search Engine]
