continue refurbishing of lts page

--- a/docs/de-de/modules/webshop/partials/lts-assistant.adoc
+++ b/docs/de-de/modules/webshop/partials/lts-assistant.adoc
@@ -1,4 +1,6 @@
-Der plentyShop LTS-Assistent führt dich bequem durch die Grundeinrichtung deines plentyShops. Du musst nicht alle Einstellungen sofort treffen. Im Schritt *Auswahl der Einstellungen* kannst du Einstellungsbereiche ausblenden, um möglichst schnell einen funktionierenden plentyShop aufzusetzen.
+Der plentyShop LTS-Assistent führt dich bequem durch die Grundeinrichtung deines plentyShops.
+Du musst nicht alle Einstellungen sofort treffen. 
+Im Schritt *Auswahl der Einstellungen* kannst du Einstellungsbereiche ausblenden, um möglichst schnell einen funktionierenden plentyShop aufzusetzen.
 
 [.instruction]
 plentyShop LTS-Assistenten durchlaufen:
@@ -24,7 +26,9 @@ Damit dein plentyShop funktioniert, musst du bestimmte Standardeinstellungen vor
 - Standardkundenklasse für B2B-Kund:innen
 - Standardstandort
 
-Diese Einstellungen sind im ersten Schritt des Assistenten gebündelt. Falls du noch keine Versand- oder Zahlungsart im System hinterlegt hast, leitet dich der Assistent auf einen weiteren Assistenten, der dir mit der Einrichtung hilft. Wenn du für jede Standardeinstellung mindestens eine Option im System hinterlegt hast, kannst du den plentyShop LTS-Assistenten weiter durchlaufen. 
+Diese Einstellungen sind im ersten Schritt des Assistenten gebündelt.
+Falls du noch keine Versand- oder Zahlungsart im System hinterlegt hast, leitet dich der Assistent auf einen weiteren Assistenten, der dir mit der Einrichtung hilft. 
+Wenn du für jede Standardeinstellung mindestens eine Option im System hinterlegt hast, kannst du den plentyShop LTS-Assistenten weiter durchlaufen. 
 
 [[tabelle-assistent-standardeinstellungen]]
 .Standardeinstellungen im Assistenten vornehmen
@@ -33,7 +37,7 @@ Diese Einstellungen sind im ersten Schritt des Assistenten gebündelt. Falls du 
 |Einstellung |Erläuterung
 
 | *Standardsprache*
-| Wähle die Sprache, die Kund:innen im plentyShop standarmäßig angezeigt wird. 
+| Wähle die Sprache, die Kund:innen im plentyShop standardmäßig angezeigt wird. 
 
 | *Standardversandart*
 | Wähle eine Versandart, die für Kund:innen automatisch vorausgewählt ist. Diese Versandart wird für die Berechnung der Versandkosten im Warenkorb verwendet, bevor sich Kund:innen im plentyShop registrieren. Die Standardversandart ist in der Kaufabwicklung vorausgewählt.
