--- a/docs/de-de/modules/webshop/pages/ceres-einrichten.adoc
+++ b/docs/de-de/modules/webshop/pages/ceres-einrichten.adoc
@@ -1,6 +1,7 @@
 = plentyShop LTS einrichten
 :author: team-webshop
 :keywords: Webshop, Ceres, plentyShop LTS, IO, Plugin, plentyShop, EHI, Trusted Shops, Mehrsprachigkeit, Template, ShopBuilder
+:description: Lerne, wie du plentyShop LTS einrichtest.
 :icons: font
 :docinfodir: /workspace/manual-adoc
 :docinfo1:
@@ -10,7 +11,7 @@ link:https://marketplace.plentymarkets.com/plugins/templates/Ceres_4697[plentySh
 
 Das Plugin *plentyShop LTS* beinhaltet das Standard-Design des Shops und kann nach deinen Wünschen angepasst werden. Das Plugin link:https://marketplace.plentymarkets.com/plugins/templates/IO_4696[IO^] beinhaltet die Logik, stellt die allgemeine Grundlage für alle Design-Plugins dar und kann auch von anderen Plugins verwendet werden.
 
-[#15]
+[#preparation]
 == Vorbereitungen
 
 [#benutzerrechte]
@@ -25,9 +26,6 @@ Das Plugin *plentyShop LTS* beinhaltet das Standard-Design des Shops und kann na
 
 include::_includes:partial$rights.adoc[]
 
-
-
-
 [#integrations-assistent]
 === Integrationenassistent
 
@@ -38,42 +36,17 @@ include::partial$lts-integration-assistant.adoc[]
 
 include::partial$lts-assistant.adoc[]
 
-
-[#300]
+[#legal]
 === Rechtliche Angaben speichern
 
-Für rechtliche Angaben stehen dir in plentyShop passende Vorlagen zur Verfügung, in denen du Rechtstexte in den verschiedenen Sprachen anzeigen kannst. Im Menüpunkt *Rechtliches* speicherst du deine *AGB*, die *Widerrufsbelehrung*, das *Widerrufsformular*, die *Datenschutzerklärung* und das *Impressum* für deinen plentyShop. +
-
-[#310.instruction]
-AGB als Klartext eingeben:
-
-. Öffne das Menü *Einrichtung » Mandant » Mandant wählen » Webshop » Rechtliches*.
-. Klappe die *Sprache* auf.
-. Wechsle in das Tab *AGB*.
-. Öffne das Tab *Text*.
-. Gib den Text für deine AGB ein.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
-
-Alternativ speicherst du deine Rechtstexte im HTML-Format. Nutze hierfür die Funktionen des HTML-Editors oder gib HTML als *Quellcode* ein.
-
-[#320.instruction]
-AGB im HTML-Format eingeben:
-
-. Öffne das Menü *Einrichtung » Mandant » Mandant wählen » Webshop » Rechtliches*.
-. Klappe die *Sprache* auf.
-. Wechsle in das Tab *AGB*.
-. Öffne das Tab *HTML*.
-. Wenn du den Text als HTML-Code eingeben möchtest, klicke auf *Quellcode*.
-. Gib den formatierten Text für deine AGB ein.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
-
-Gib die Texte für die *Widerrufsbelehrung*, das *Widerrufsformular*, die *Datenschutzerklärung* und das *Impressum* analog in den gewünschten Sprachen ein. Alternativ lädst du für das Widerrufsformular eine PDF-Datei hoch. Die Texte werden in plentyShop auf den zugehörigen Seiten angezeigt. +
+include::partial$lts-legal.adoc[]
 
 [#10]
 == plentyShop LTS-Plugin einrichten
 
-Nachdem du die <<#15, Vorbereitungen>> für deinen plentyShop getroffen hast, kannst du nun mit der Einrichtung des Plugins *plentyShop LTS* beginnen.
-Die folgenden Kapitel führen dich durch die Einrichtung der einzelnen Tabs der <<#20, plentyShop LTS Konfiguration>>. Du erreichst die plentyShop LTS Konfiguration über die *Plugin-Übersicht* durch Klick auf das Plugin *plentyShop LTS*. +
+Nachdem du die <<#preparation, Vorbereitungen>> für deinen plentyShop getroffen hast, kannst du nun mit der Einrichtung des Plugins *plentyShop LTS* beginnen.
+Die folgenden Kapitel führen dich durch die Einrichtung der einzelnen Tabs der <<#20, plentyShop LTS Konfiguration>>. 
+Du erreichst die plentyShop LTS Konfiguration über die *Plugin-Übersicht* durch Klick auf das Plugin *plentyShop LTS*. +
 Für die Einrichtung sind keinerlei Programmierkenntnisse erforderlich.
 
 [IMPORTANT]
