--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -719,6 +719,7 @@
 .plentymarkets Changelog
 * xref:ROOT:changelog.adoc[Aktueller Changelog]
 * xref:changelog:september-2022.adoc[Changelogs September 2022]
+** xref:changelog:2022-09-14.adoc[Changelog 14. September 2022]
 ** xref:changelog:2022-09-07.adoc[Changelog 07. September 2022]
 * xref:changelog:august-2022.adoc[Changelogs August 2022]
 ** xref:changelog:2022-08-31.adoc[Changelog 31. August 2022]
