--- a/docs/de-de/modules/changelog/pages/2022-09-14.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-09-14.adoc
@@ -6,7 +6,7 @@
 :startWeekDate: 8. September 2022
 :endWeekDate: 14. September 2022
 
-// Ab diesem Eintrag weitermachen: LINK EINFÜGEN
+// Ab diesem Eintrag weitermachen: https://forum.plentymarkets.com/t/aenderungen-im-systembaum-pos-changes-to-the-system-tree-pos/694390
 
 Erfahre, was sich in der Woche vom {startWeekDate} bis zum {endWeekDate} bei plentymarkets getan hat. Im Folgenden findest du alle Changelog-Einträge der letzten Woche für stable- und early-Systeme.
 
@@ -26,6 +26,17 @@ stable::
 == Neu
 
 Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
+
+[discrete]
+=== Amazon
+
+* Die Auftragsherkunft *Amazon Belgium* wurde hinzugefügt. Damit wirst du deine Artikel in Zukunft auch auf Amazon in Belgien anbieten können.
++
+[NOTE]
+.Hinweis
+======
+Amazon hat den Marktplatz noch nicht gestartet. Das bedeutet, dass du momentan noch keine Artikel auf Amazon in Belgien verkaufen kannst.
+======
 
 [discrete]
 === CRM
@@ -93,7 +104,36 @@ early::
 
 Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
 
+[discrete]
+=== CRM
 
+* Die neue Version des EmailBuilder wurde veröffentlicht und bietet die folgenden Features:
+** Mehrsprachigkeit
+** Sprachabhängige Einstellungen von den globalen Einstellungen getrennt
+** Vorlagen für andere Sprachen kopieren
+** Eigner und Mandant einer Vorlage zuweisen
+** Filter, um nach Vorlagen suchen zu können
+** komplette Vorlagen mit allen Sprachen und Einstellungen kopieren
+** Vorlagen verschieben / Ordner verschieben
+
++
+Alle alten Vorlagen, die ihr bereits im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Vorlagen* erstellt habt, werden in diesem Zuge automatisch in den EmailBuilder migriert.
+
++
+[IMPORTANT]
+.To-Do
+======
+* Prüfe die Inhalte der migrierten Vorlagen.
+* Prüfe in deinem gesamten plentymarkets System alle Stellen, an denen du E-Mail-Vorlagen verknüpft hast, die automatisiert versendet werden.
+* Wenn du in der vorherigen Version des EmailBuilder bereits mehrsprachige Vorlagen angelegt hast, musst du diese manuell überführen.
+
+Weitere Informationen findest du im link:https://forum.plentymarkets.com/t/neue-funktionen-des-emailbuilders-inkl-migration-bestehender-vorlagen-new-features-of-emailbuilder-incl-migration-of-existing-templates/693489#new-features-of-the-emailbuilder-including-migration-of-existing-templates-9[Forum^] und auf der Handbuchseite xref:crm:emailbuilder.adoc[EmailBuilder (Testphase)].
+======
+
+[discrete]
+=== Fulfillment
+
+* Ab sofort ist die neue Paketinhaltsliste im Menü Aufträge » Paketinhaltsliste (Testphase) verfügbar. Weitere Informationen findest du in im link:https://forum.plentymarkets.com/t/ankuendigung-neue-paketinhaltsliste-announcement-new-package-content-list/693629[Forum^] und auf der Handbuchseite xref:fulfillment:paketinhaltsliste-testphase.adoc[Paketinhaltsliste (Testphase)]. Die alte Paketinhaltsliste wurde in diesem Zuge als *veraltet* gekennzeichnet.
 
 '''
 
@@ -102,7 +142,21 @@ Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlich
 
 Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
 
+[discrete]
+=== Benutzeroberfläche
 
+* In allen Ansichten, in denen die Schnellsuche vorhanden ist, wird nun direkt eine Suche ausgeführt, sobald Du zu Deinem eingegebenen Stichwort einen vorgeschlagenen Filter auswählst. Solltest Du mehrere Filter für Deine Suche benötigen, kannst Du diese wie gehabt im Filter-Menü setzen.
+
+[discrete]
+=== CRM
+
+* Die folgenden Menüpunkte wurden im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail* entfernt:
+** *Zugangsdaten*
+** *Signatur*
+** *Infodienst*
+
++
+Du kannst diese Einstellungen ab sofort nur noch im Assistenten *E-Mail-Konten* vornehmen. Du findest den Assistenten im Menü *Einrichtung » Assistenten » Grundeinrichtung*.
 
 '''
 
@@ -111,7 +165,38 @@ Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlic
 
 Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
 
+[discrete]
+=== CRM
 
+* Wenn man im Kontaktdatensatz im Bereich Kontaktdetails die Zahlungsart Lastschrift aktiviert hat, wurde diese Aktion nicht gespeichert. Dieses Verhalten wurde behoben.
+
+'''
+
+[discrete]
+== Gelöscht
+
+Folgende Funktionalität wurde in den letzten 7 Tagen von *{version}* gelöscht.
+
+[discrete]
+=== plentyShop
+
+* Im Zuge der Vereinfachung des plentymarkets Backends haben wir einige weitere veraltete Menüpfade und Einstellungen entfernt. Dabei handelt es sich zunächst nur um Einstellungen, die für plentyShops relevant sind oder für dessen Vorgänger Callisto relevant waren. Es handelt sich dabei ausschließlich um kosmetische/organisatorische Änderungen; durch das Entfernen von Menüs werden keine Funktionalitäten entfernt! Die folgenden Einstellungen wurden aus dem plentymarkets Backend entfernt:
+** Einrichtung » Mandant » (Mandanten wählen) » Webshop » Multilingual » Bereich
+** Einrichtung » Mandant » (Mandanten wählen) » Webshop » Multilingual » Automatische Spracherkennung
+** Einrichtung » Mandant » (Mandanten wählen) » Artikelansichten » Einstellungen » Artikelanzeige
+** Einrichtung » Mandant » (Mandanten wählen) » Artikelansichten » Einstellungen » Attribut-Verfügbarkeit
+** Einrichtung » Mandant » (Mandanten wählen) » Artikelansichten » Einstellungen » Sortierung der Artikelkategorien (Ebene 1)
+** Einrichtung » Mandant » (Mandanten wählen) » Artikelansichten » Einstellungen » Sortierung der Artikelkategorien (Ebene 2)
+** Einrichtung » Mandant » (Mandanten wählen) » Artikelansichten » Einstellungen » Automatische Sortierung nach monatlichen Verkäufen
+** Einrichtung » Mandant » (Mandanten wählen) » Bestellvorgang » Einstellungen » Artikelpaket
+** Einrichtung » Mandant » (Mandanten wählen) » Bestellvorgang » Einstellungen » Standard-Lieferland
+** Einrichtung » Mandant » (Mandanten wählen) » Bestellvorgang » Einstellungen » Grundpreis
+** Einrichtung » Mandant » (Mandanten wählen) » Bestellvorgang » Einstellungen » Zahlungsinformation
+** Einrichtung » Mandant » (Mandanten wählen) » Bestellvorgang » Einstellungen » Versandart
+** Einrichtung » Mandant » (Mandanten wählen) » Bestellvorgang » Einstellungen » Newsletter-Anmeldung im Bestellvorgang
+** Einrichtung » Mandant » (Mandanten wählen) » Bestellvorgang » Einstellungen » IP-Adresse des Käufers
+** Einrichtung » Mandant » (Mandanten wählen) » Bestellvorgang » Einstellungen » Angabe Lieferdatum
+** Einrichtung » Mandant » (Mandanten wählen) » Bestellvorgang » Einstellungen » Externe Umsatzsteuer-ID-Prüfung
 
 --
 
@@ -125,9 +210,41 @@ Folgende Plugins wurden in den letzten 7 Tagen in einer neuen Version auf plenty
 |===
 |Plugin-Name |Version |To-do
 
-|
-|
-|
+|link:https://marketplace.plentymarkets.com/proslider_55225[18BITS PRO SLIDER^]
+|1.0.3
+|-
+
+|link:https://marketplace.plentymarkets.com/cfourcustomcssjs_5143[Custom CSS/JS im Frontend^]
+|2.0.7
+|-
+
+|link:https://marketplace.plentymarkets.com/easycredit_5109[easyCredit-Ratenkauf^]
+|2.0.4
+|-
+
+|link:https://marketplace.plentymarkets.com/extendedimagecarouselwidget_55287[Erweiterter Bilder-Karussell Widget^]
+|1.0.1
+|-
+
+|link:https://marketplace.plentymarkets.com/edon_6618[FairGeben^]
+|1.4.0
+|-
+
+|link:https://marketplace.plentymarkets.com/mirakl_6917[Mirakl Connector^]
+|1.2.3
+|-
+
+|link:https://marketplace.plentymarkets.com/mytoys_54776[MyToys^]
+|1.0.45
+|-
+
+|link:https://marketplace.plentymarkets.com/wishlistwidgets_55040[Optimierte Wunschliste + Widget^]
+|1.0.4
+|Wenn die Wunschlisten-Artikel weiterhin überschrieben werden sollen, muss die Checkbox in der Plugin-Konfiguration neu gesetzt werden.
+
+|link:https://marketplace.plentymarkets.com/woocommerce_5102[woocommerce.com^]
+|3.0.9
+|-
 
 |===
 
