ADD group function create doc

--- a/docs/en-gb/modules/orders/pages/working-with-orders.adoc
+++ b/docs/en-gb/modules/orders/pages/working-with-orders.adoc
@@ -78,6 +78,11 @@ In the editing mode (terra:design_inline_edit[role="darkGrey"]) of the order ove
 | *Set order item shipping date*
 |material:pending_actions[]
 |Sets a shipping date for the order item of all selected orders. Enter a shipping date or selected a date via the calendar (material:today[]).
+
+| *Create document*
+|material:note_add[]
+|Creates a document for all selected orders. Select a document type from the drop-down list and enter a creation date for the document or select a date from the calendar (material:today[]).
+
 |===
 
 == Using further functions in the order overview
