--- a/docs/en-gb/modules/pos/pages/integrating-plentymarkets-pos.adoc
+++ b/docs/en-gb/modules/pos/pages/integrating-plentymarkets-pos.adoc
@@ -52,7 +52,7 @@ To use plentyPOS, you need to link:https://www.plentymarkets.com/product/pricing
 
 After you have booked POS, it takes two or three minutes for the activation process to finish in the background. Then, log out of your plentymarkets system and log in again. This step is also necessary if you have already set up points of sale and book one or several new points of sale later.
 
-Afterwards, you carry out the settings for the points of sale in the plentymarkets back end. First, you assign a POS to a client by creating a POS in the *System » System settings » Client » [Select client] » POS* menu and carrying out further settings. To do so, proceed as described below.
+Afterwards, you carry out the settings for the points of sale in the plentymarkets back end. First, you assign a POS to a client by creating a POS in the *Setup » POS » [Select client]* menu and carrying out further settings. To do so, proceed as described below.
 
 [WARNING]
 .Do not change POS settings while POS is in use
@@ -68,7 +68,7 @@ First, create a POS for the client (store) in the plentymarkets back end.
 [.instruction]
 Creating a POS for a client:
 
-. Go to *Setup » Client » [Select client] » POS*.
+. Go to *Setup » POS » [Select client]*.
 . Click on *New POS*. +
 → The window *New POS* is displayed.
 . Enter a name for the POS.
@@ -262,7 +262,7 @@ Proceed as described below to save variations as favourites.
 [.instruction]
 Saving variations as favourites:
 
-. Go to *Setup » Client » [Select client] » POS*.
+. Go to *Setup » POS » [Select client]*.
 . Open the POS.
 . Click on the *Favourites* tab.
 . Click on the *Add variation* tab. +
@@ -286,7 +286,7 @@ You can change the priority of favourites using the arrow symbols in the *Favour
 [.instruction]
 Changing the order of favourites:
 
-. Go to *Setup » Client » [Select client] » POS*.
+. Go to *Setup » POS » [Select client]*.
 . Open the POS.
 . Open the *Favourites* tab. +
 → A list of the variations of the favourites list is displayed.
@@ -302,7 +302,7 @@ You can copy the favourites list of one POS to one or several other POS of the s
 [.instruction]
 Copying favourites to another POS:
 
-. Go to *Setup » Client » [Select client] » POS*.
+. Go to *Setup » POS » [Select client]*.
 . Open the POS.
 . Open the *Favourites* tab. +
 → A list of the variations of the favourites list is displayed.
@@ -320,7 +320,7 @@ Proceed as described below to delete variations from the favourites list. Variat
 [.instruction]
 Deleting variations from the favourites list:
 
-. Go to *Setup » Client » [Select client] » POS*.
+. Go to *Setup » POS » [Select client]*.
 . Open the POS.
 . Open the *Favourites* tab. +
 → A list of the variations of the favourites list is displayed.
@@ -335,7 +335,7 @@ In the *Receipt* tab of the POS settings, you specify the data to be displayed o
 [.instruction]
 Editing the receipt template:
 
-. Go to *Setup » Client » [Select client] » POS*.
+. Go to *Setup » POS » [Select client]*.
 . Open the POS.
 . Click on the *Receipt* tab.
 . Place a check mark next to the components to be shown on the POS's receipts.
@@ -663,7 +663,7 @@ Note that payment methods must also be permitted for customer classes in another
 [TIP]
 .Payment method Cash sale/cash card
 ====
-For the payment method *11 » Cash sale/cash card*, also go to *System » Client » [Select client] » POS » [Open POS] » Tab: Payment method* and select *Unconnected device* in the *POS terminal* area.
+For the payment method *11 » Cash sale/cash card*, also go to *Setup » POS » [Select client] » [Open POS] » Tab: Payment method* and select *Unconnected device* in the *POS terminal* area.
 ====
 
 [#1070]
@@ -944,7 +944,7 @@ a|
 * Yes
 * No
 
-|Setup » Client » [Select client] » POS » [Open POS] » Tab: Receipt
+|Setup » POS » [Select client] » [Open POS] » Tab: Receipt
 |List identical order items
 a|
 * Individually
@@ -1037,7 +1037,7 @@ Creating a default customer for POS orders:
 . Click on *Create new contact*.
 . Carry out the settings according to <<table-POS-default-customer>>.
 . *Save* (icon:save[role="darkGrey"]) the settings.
-. Go to *System » Client » [Select client] » POS » [Open POS] » Basic settings*.
+. Go to *Setup » POS » [Select client] » [Open POS] » Basic settings*.
 . Enter the ID of the default customer into the *Default customer* field.
 . *Save* (icon:save[role="darkGrey"]) the settings.
 
@@ -1099,7 +1099,7 @@ The required settings are described in <<table-POS-dummy-item>>. The subheadings
 | *VAT*
 |Enter the VAT rate that should be used for the dummy item.
 
-2+^| *Setup » Client » [Select client] » POS » [Open POS]*
+2+^| *Setup » POS » [Select client] » [Open POS]*
 
 | *Query price if price is 0*
 |Activate the option.
@@ -1337,7 +1337,7 @@ A coupon receipt can be created and printed. The coupon receipt shows the follow
 [.instruction]
 Activating printing of coupon receipts:
 
-. Go to *Setup » Client » [Select client] » POS*.
+. Go to *Setup » POS » [Select client]*.
 . Open the POS.
 . Click on the *Receipt* tab.
 . Activate the option *Print and save gift card receipt*.
@@ -1649,7 +1649,7 @@ A coupon receipt can be created and printed. The coupon receipt shows the follow
 [.instruction]
 Activating printing of coupon receipts:
 
-. Go to *Setup » Client » [Select client] » POS*.
+. Go to *Setup » POS » [Select client]*.
 . Open the POS.
 . Click on the *Receipt* tab.
 . Activate the option *Print and save gift card receipt*.
@@ -1721,7 +1721,7 @@ Creating coupon item for refunds:
 [.instruction]
 Linking coupon item for refunds with POS:
 
-. Go to *Setup » Client » [Select client] » POS*.
+. Go to *Setup » POS » [Select client]*.
 . Open the POS. +
 → The *Basic settings* tab opens.
 . Activate the option *Refund customer with gift card*. +
@@ -2264,7 +2264,7 @@ To take a POS with location in Austria out of commission, you need to create an 
 [.instruction]
 Deleting a POS:
 
-. Go to *Settings » Client » Standard » POS*.
+. Go to *Setup » POS » [Select client]*.
 . Click on the POS. +
 → The *Basic settings* tab of the POS opens.
 . In the top left corner, click *Delete*. +
