update some more menu paths

--- a/docs/de-de/modules/crm/pages/newsletter-versenden.adoc
+++ b/docs/de-de/modules/crm/pages/newsletter-versenden.adoc
@@ -206,7 +206,7 @@ Du kannst den Namen jederzeit ändern. Der Name wird den Empfänger:innen _nicht
  Alle E-Mail-Vorlagen können mit bis zu 2 Anhängen standardisiert an deine Kund:innen versendet werden: PDF-Dokumente aus dem Bereich Fulfillment (z.B. Rechnungen) oder andere Dateien (z.B. ein Artikelprospekt oder eine Anleitung). Für die Vorlage *Eingangsbestätigung Webshop Bestellung* wären z.B. die Widerrufsbelehrung und die AGB im PDF-Format eine sinnvolle Ergänzung.
 
 | *Antwort an*
-|Gib die E-Mail-Adresse ein, an die die Antworten auf diese E-Mail-Vorlage gesendet werden sollen. Wenn keine E-Mail-Adresse eingegeben ist, werden Antworten auf diese Vorlage standardmäßig an die unter *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Zugangsdaten* xref:crm:e-mails-versenden.adoc#100[gespeicherte E-Mail-Adresse] versendet. Beispielsweise ist es sinnvoll, die E-Mail-Adresse der Buchhaltungsabteilung für die E-Mail-Vorlage *PDF-Rechnung* einzugeben. So gehen z.B. Rückfragen zur Rechnung direkt an die Buchhaltungsabteilung und müssen nicht weitergeleitet werden.
+|Gib die E-Mail-Adresse ein, an die die Antworten auf diese E-Mail-Vorlage gesendet werden sollen. Wenn keine E-Mail-Adresse eingegeben ist, werden Antworten auf diese Vorlage standardmäßig an die im Assistenten *E-Mail-Konten* im Schritt *Zugangsdaten*  xref:crm:e-mails-versenden.adoc#100[gespeicherte E-Mail-Adresse] versendet. Beispielsweise ist es sinnvoll, die E-Mail-Adresse der Buchhaltungsabteilung für die E-Mail-Vorlage *PDF-Rechnung* einzugeben. So gehen z.B. Rückfragen zur Rechnung direkt an die Buchhaltungsabteilung und müssen nicht weitergeleitet werden.
 
 | *Design verwenden*
 |Aktiviere diese Option, wenn der Inhalt der E-Mail mit dem im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » HTML-Design* xref:crm:e-mails-versenden.adoc#800[gespeicherten Design] versendet werden soll. Wenn du die Option _nicht_ aktivierst, wird nur der Inhalt der E-Mail-Vorlage verwendet.
