--- a/docs/en-gb/modules/welcome/pages/quick-start-initial-settings.adoc
+++ b/docs/en-gb/modules/welcome/pages/quick-start-initial-settings.adoc
@@ -218,7 +218,7 @@ Customising the email template:
 
 | *Reply to*
 |Enter an email address. If someone replies to the email template, their message is sent to this address. +
-*_Note:_* If no email address is entered, replies to this email template are sent to the email address that is saved in the *Setup » Client » [Select client] » Email » Login details* menu.
+*_Note:_* If no email address is entered, replies to this email template are sent to the email address that is saved in the *Email accounts* assistant in the *Login details* step.
 
 | *Use design*
 |You only have to activate this option if you wish to link an HTML design with the email template. This setting is not relevant in this case because we only describe plain text and no HTML-formatted text in the quick start.
