--- a/docs/de-de/modules/crm/pages/e-mails-versenden.adoc
+++ b/docs/de-de/modules/crm/pages/e-mails-versenden.adoc
@@ -34,56 +34,66 @@ video::211643476[vimeo, width=640, height=360]
 
 include::_includes:partial$rights.adoc[]
 
-
 [#100]
 == E-Mail-Server-Zugangsdaten speichern
 
-Im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Zugangsdaten* speicherst du die Zugangsdaten des E-Mail-Postfachs, aus dem du E-Mails versenden möchtest, damit dein plentymarkets System E-Mails wie Auftragsbestätigungen und Versandbestätigungen von dieser E-Mail-Adresse versenden kann.
+Im Assistenten *E-Mail-Konten* im Menü *Einrichtung » Assistenten » Grundeinrichtung* speicherst du die Zugangsdaten des E-Mail-Postfachs, aus dem du E-Mails versenden möchtest, damit dein plentymarkets System E-Mails wie Auftragsbestätigungen und Versandbestätigungen von dieser E-Mail-Adresse versenden kann.
 
-[.instruction]
-E-Mail-Server-Zugangsdaten speichern:
-
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Zugangsdaten*.
-. Nimm die gewünschten Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-email-server-login-details>>.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
-
+[.collapseBox]
+.Einstellungen im Assistenten *E-Mail-Konten* im Schritt *Zugangsdaten*
+--
 [[table-email-server-login-details]]
-.E-Mail-Server-Zugangsdaten speichern
+.E-Mail-Server-Zugangsdaten im Assistenten *E-Mail-Konten* speichern
 [cols="1,3"]
 |====
 |Einstellung |Erläuterung
 
-| *Testmodus*
-| *Aktiv* oder *Inaktiv* wählen. +
-*Aktiv* = Der Testmodus ist aktiviert. Alle E-Mails werden nur an die eingegebene E-Mail-Adresse gesendet. So kann vor dem Live-Betrieb die korrekte Funktionsweise geprüft werden. +
-*Inaktiv* = Der Live-Modus ist aktiviert. +
-*_Wichtig:_* Der Testmodus gilt nur für diesen Webshop. Die Einstellungen für weitere Mandanten werden im Menü des Mandanten (Shops) konfiguriert.
-
-| *Name des Absenders*
-|Eigenen Namen oder Namen des Webshops eingeben. Der Name wird den Empfänger:innen angezeigt. Für die korrekte Darstellung die Verwendung von Sonderzeichen vermeiden.
-
-| *E-Mail-Adresse*
-|E-Mail-Adresse eingeben, wie sie auch im E-Mail-Programm steht.
+2+| Wie lauten die Server-Daten deines Anbieters? +
+Gib den Postausgangsserver / SMTP-Server und den Port ein und wähle die Verschlüsselungsmethode aus der Liste. Diese Daten bekommst du von deinem E-Mail-Anbieter.
 
 | *Postausgangsserver/SMTP-Server*
-|Postausgangsserver wie vom Provider angegeben eingeben (meist smtp.domain.de oder mail.domain.de). +
-*_mailbox.org:_* Für Postfächer bei mailbox.org den Postausgangsserver *smtp.mailbox.org* eingeben und Verschlüsselung *SSL* wählen.
+|Gib den Postausgangsserver wie vom Provider angegeben ein (meist smtp.domain.de oder mail.domain.de). +
+*_mailbox.org:_* Gib für Postfächer bei mailbox.org den Postausgangsserver *smtp.mailbox.org* ein und wähle die Verschlüsselung *SSL*.
+
+| *Port (Standardport: 25)*
+|Gib den Wert *25* ein. Dieser Wert ist für fast alle Provider korrekt. Erfrage ggf. den korrekten Port beim Provider. +
+*_mailbox.org:_* Gib für Postfächer bei mailbox.org den Port *465* ein und wähle die Verschlüsselung *SSL*.
+
+| *Verschlüsselungsmethode*
+| Wähle *SSL*, *TLS* oder *keine Verschlüsselung*.  +
+*_mailbox.org:_* Gib für Postfächer bei mailbox.org den Port *465* ein und wähle die Verschlüsselung *SSL*.
+
+2+| Wie lauten die Zugangsdaten deines E-Mail-Kontos? 
+
+| *Name des Absenders*
+|Gib deinen eigenen Namen oder den Namen deines Webshops ein. Der Name wird den Empfänger:innen angezeigt. +
+*_Hinweis:_* Damit der Name korrekt dargestellt wird, vermeide die Verwendung von Sonderzeichen.
+
+| *E-Mail-Adresse*
+|Gib die E-Mail-Adresse ein, wie sie auch im E-Mail-Programm steht.
 
 | *Benutzername*
-|Benutzer:innenname zu der E-Mail-Adresse eingeben. +
+|Gib den Benutzer:innenname zu der E-Mail-Adresse ein. +
 *_mailbox.org:_* Der mailbox.org-Benutzer:innenname ist die vollständige E-Mail-Adresse des mailbox.org-Postfachs.
 
 | *Passwort*
-|Passwort zu dem Benutzer:innenname und der E-Mail-Adresse eingeben.
+|Gib das Passwort zu dem Benutzer:innenname und der E-Mail-Adresse ein.
 
-| *Port (Standardport: 25)*
-|Wert *25* eingeben. Dieser Wert ist für fast alle Provider korrekt. Ggf. den korrekten Port beim Provider erfragen. +
-*_mailbox.org:_* Für Postfächer bei mailbox.org den Port *465* eingeben und unter *Verschlüsselung* die Einstellung *SSL* wählen.
+2+|Möchtest du den E-Mail-Versand jetzt testen? +
+Mit einem Klick auf material:outgoing_mail[] wird eine Test-E-Mail an die oben eingegebene E-Mail-Adresse gesendet.
 
-| *Verschlüsselung*
-| *SSL*, *TLS* oder *keine Verschlüsselung* wählen. Weitere Informationen findest du im Kapitel xref:crm:e-mails-versenden.adoc#200[Verschlüsselung der E-Mail-Kommunikation wählen]. +
-*_mailbox.org:_* Für Postfächer bei mailbox.org den Port *465* eingeben und Verschlüsselung *SSL* wählen.
+2+|Möchtest du den Live-Modus aktivieren? +
+Während der Einrichtung ist der Live-Modus deaktiviert. Das heißt, ausgehende E-Mails werden nur an die oben eingegebene E-Mail-Adresse gesendet, damit du den E-Mail-Versand testen kannst. Wenn du mit dem Einrichten deines Systems fertig bist, solltest du den Live-Modus aktivieren, damit E-Mails an deine Kund:innen gesendet werden können.
+
+|(material:check_box_outline_blank[])
+|Wenn du kein Häkchen bei *Live-Modus aktivieren* setzt (material:check_box_outline_blank[]), ist der Testmodus aktiviert. + Alle E-Mails werden nur an die eingegebene E-Mail-Adresse gesendet. So kannst du vor dem Live-Betrieb die korrekte Funktionsweise prüfen. +
+*_Wichtig:_* Der Testmodus gilt nur für diesen Webshop. Die Einstellungen für weitere Mandanten werden im Menü des Mandanten (Shops) konfiguriert.
+
+|(material:check_box[role=skyBlue])
+|Wenn du ein Häkchen bei *Live-Modus aktivieren* setzt (material:check_box[role=skyBlue]), ist der Live-Modus aktiviert.
+
 |====
+--
 
 [TIP]
 .Newsletter-Zugangsdaten eingeben
@@ -99,7 +109,7 @@ Die Verschlüsselungsmethoden *SSL*, *TLS* und die Einstellung *keine Verschlüs
 [#300]
 === Sicherheit durch SSL-Verschlüsselung
 
-Richte für eine geschützte Datenübertragung zwischen deinen E-Mail-Programmen und deinem Postfach eine SSL-Verschlüsselung ein. <<#table-ssl-encryption>> listet die Einstellungen für die SSL-Verschlüsselung im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Zugangsdaten* auf.
+Richte für eine geschützte Datenübertragung zwischen deinen E-Mail-Programmen und deinem Postfach eine SSL-Verschlüsselung ein. <<#table-ssl-encryption>> listet die Einstellungen für die SSL-Verschlüsselung im Assistenten *E-Mail-Konten* im Schritt *Zugangsdaten* auf.
 
 [[table-ssl-encryption]]
 .Einstellungen für SSL-Verschlüsselung
@@ -126,7 +136,7 @@ Richte für eine geschützte Datenübertragung zwischen deinen E-Mail-Programmen
 [#400]
 === Sicherheit durch STARTTLS
 
-Um die Kompatibilität zu älteren E-Mail-Programmen zu gewährleisten, bietet plentymarkets auch STARTTLS an. <<#table-starttls-encryption>> listet die Einstellungen für die STARTTLS-Verschlüsselung im Menü *Einrichtung » Mandant » [Mandant wählen]» E-Mail » Zugangsdaten* auf.
+Um die Kompatibilität zu älteren E-Mail-Programmen zu gewährleisten, bietet plentymarkets auch STARTTLS an. <<#table-starttls-encryption>> listet die Einstellungen für die STARTTLS-Verschlüsselung im Assistenten *E-Mail-Konten* im Schritt *Zugangsdaten* auf.
 
 [[table-starttls-encryption]]
 .Einstellungen für STARTTLS-Verschlüsselung
@@ -159,7 +169,7 @@ Um die Kompatibilität zu älteren E-Mail-Programmen zu gewährleisten, bietet p
 In unverschlüsselter Form kann deine Kommunikation von Dritten eingesehen werden. Eine unverschlüsselte Übertragung entspricht nicht mehr den aktuellen Sicherheitsstandards.
 ====
 
-<<#table-unencrypted-connection>> listet die Einstellungen für eine unverschlüsselte Verbindung im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Zugangsdaten* auf.
+<<#table-unencrypted-connection>> listet die Einstellungen für eine unverschlüsselte Verbindung im Assistenten *E-Mail-Konten* im Schritt *Zugangsdaten* auf.
 
 [[table-unencrypted-connection]]
 .Einstellungen für eine unverschlüsselte Verbindung
@@ -187,7 +197,14 @@ In unverschlüsselter Form kann deine Kommunikation von Dritten eingesehen werde
 [#600]
 == E-Mail-Signatur speichern
 
-Im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur* speicherst du deine Signatur, die dann in einer E-Mail-Vorlage automatisch eingefügt wird.
+Im Assistenten *E-Mail-Konten* im Menü *Einrichtung » Assistenten » Grundeinrichtung* speicherst du deine Signatur, die dann in deinen E-Mail-Vorlagen automatisch eingefügt wird, wenn du die entsprechende Variable in der Vorlage eingefügt hast.
+
+[IMPORTANT]
+.Priorität der Signatur beachten
+====
+Die im Benutzer:innenkonto im Menü *Einrichtung » Einstellungen » Benutzer » Konten* eingegebene Signatur hat Priorität gegenüber der Signatur, die im Assistenten *E-Mail-Konten* im Schritt *Signatur* gespeichert ist. +
+*_Das bedeutet:_* Wenn du z.B. die Variable `Signatur im HTML-Format` in die Vorlage einfügst, wird die Signatur aus dem Benutzer:innenkonto übernommen. Wenn keine Signatur im Benutzer:innenkonto gespeichert ist, wird die Signatur, die im Assistenten *E-Mail-Konten* im Schritt *Signatur* gespeichert ist, übernommen.
+====
 
 [IMPORTANT]
 .Gesetzliche Vorgaben beachten
@@ -195,61 +212,41 @@ Im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur* spe
 Beachte die für deinen Online-Shop geltenden gesetzlichen Vorgaben zum Inhalt einer E-Mail-Signatur, wie z.B. die Angabe der USt-IdNr. Die Pflichtangaben entsprechen denen der Geschäftsbriefe deines Unternehmens. Bei Nichtbeachten besteht die Gefahr eines Zwangsgeldes oder einer kostenpflichtigen Abmahnung durch einen Mitbewerber. Lasse dich im Zweifelsfall von einem kundigen Anwaltsbüro beraten.
 ====
 
-[.instruction]
-E-Mail-Signatur speichern:
-
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur*.
-. Gib den Text deiner Signatur ein. Beachte dazu die Erläuterung in der grünen Box.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
-
-[TIP]
-.Signatur mit Hilfe des HTML-Editors formatieren
-====
-Entscheide, ob du den Text deiner Signatur als *reine Textsignatur* oder als *HTML-Signatur* speicherst. Wenn du den Text formatieren möchtest, empfiehlt es sich, den Text im Bereich *HTML-Signatur* einzugeben. Dort steht dir der integrierte HTML-Editor zur Verfügung.
-
-Im Menü *Einrichtung » Einstellungen » Editoren* legst du fest, welche Editoren für bestimmte Bereiche in deinem plentymarkets System zur Verfügung stehen sollen. Wähle zwischen *Editor*, *Syntax-Editor* und *Textfeld*.
-====
-
 [#700]
 == E-Mail-Infodienst einrichten
 
-Du hast im Menü *Einrichtung » Mandant » [Mandant wählen] » Email » Infodienst* die Möglichkeit, alle von deinem plentymarkets System ausgehenden E-Mails auf eine von dir gewählte E-Mail-Adresse als blinde Kopie (BCC) zu versenden. Besonders in der Anfangsphase deines Webshops erhältst du so eine gute Kontrolle über alle versendeten E-Mails und kannst erkennen, wo du Prozesse noch optimieren musst. Du kannst in diesem Menü auch einstellen, dass du bei Bestellungen automatisch eine Info-E-Mail erhältst.
+Du kannst im Assistenten *E-Mail-Konten* im Menü *Einrichtung » Assistenten » Grundeinrichtung* einstellen, dass alle von deinem plentymarkets System ausgehenden E-Mails auf eine von dir gewählte E-Mail-Adresse als Blindkopie versendet werden. Besonders in der Anfangsphase deines Webshops erhältst du so eine gute Kontrolle über alle versendeten E-Mails und kannst erkennen, wo du Prozesse noch optimieren musst. Du kannst hier auch einstellen, dass du bei Bestellungen automatisch eine Info-E-Mail erhältst.
 
-[.instruction]
-E-Mail-Infodienst einrichten:
-
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Infodienst*.
-. Nimm die gewünschten Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-email-info-service>>.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
-
-[[table-email-info-service]]
-.E-Mail-Infodienst einrichten
+[.collapseBox]
+.Einstellungen im Assistenten *E-Mail-Konten* im Schritt *Infodienst*
+--
+[[table-info-service]]
+.E-Mail-Server-Zugangsdaten im Assistenten *E-Mail-Konten* speichern
 [cols="1,3"]
 |====
 |Einstellung |Erläuterung
 
-| *Alle ausgehenden E-Mails werden als blinde Kopie (BCC) an die E-Mail-Adresse (nächste Zeile) gesendet*
-|Einstellen, ob alle ausgehenden E-Mails als BCC an eine oder mehrere E-Mail-Adressen gesendet werden. Die E-Mail-Adressen werden in der nächsten Zeile eingegeben. +
-*JA* = Option ist aktiviert. +
-*NEIN* = Option ist deaktiviert (Standardeinstellung).
+2+| Möchtest du eine Blindkopie von allen von deinem plentymarkets System ausgehenden E-Mails erhalten?
 
-| *E-Mail-Adresse für blinde Kopie*
-|E-Mail-Adresse(n) eingeben. Mehrere E-Mail-Adressen kommagetrennt und ohne Leerzeichen eingeben.
+|*E-Mails als Blindkopie erhalten* (material:toggle_off[role=darkGrey])
+|Wenn du keine Blindkopie erhalten möchtest, aktiviere die Schaltfläche _nicht_ (material:toggle_off[role=darkGrey]).
 
-| *Blinde Kopien (BCC) für Newsletter deaktivieren*
-|Wählen, ob blinde Kopien (BCC) bei Newslettern versendet werden. +
-Option aktivieren = Es werden keine blinde Kopien bei Newslettern versendet. +
-Option deaktivieren = Es werden blinde Kopien bei Newslettern versendet (Standardeinstellung).
+|*E-Mails als Blindkopie erhalten* (material:toggle_on[role=skyBlue])
+|Wenn du eine Blindkopie erhalten möchtest, aktiviere die Schaltfläche (material:toggle_on[role=skyBlue]). Gib im Feld, das unterhalb erscheint, die E-Mail-Adresse(n) ein. Gib mehrere E-Mail-Adressen kommagetrennt und ohne Leerzeichen ein.
 
-| *Sende Hinweis bei Eingang einer neuen Bestellung an E-Mail (nächste Zeile)*
-|Einstellen, ob bei einer neuen Bestellung eine E-Mail versendet wird. Die E-Mail-Adressen werden in der nächsten Zeile eingegeben. +
-*JA* = Es wird eine E-Mail versendet, wenn eine Bestellung eingeht. +
-*NEIN* = Es wird keine E-Mail versendet (Standardeinstellung). +
- *_Wichtig:_* Bei neuen Bestellungen über eBay ist diese Funktion nicht vorhanden. Es wird empfohlen stattdessen eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] einzurichten.
+|*Newsletter als Blindkopie erhalten*
+|Wenn du den in plentymarkets integrierten xref:crm:newsletter-versenden.adoc#[Newsletter] verwendest, kannst du hier einstellen, ob du eine Blindkopie erhalten möchtest, wenn ein Newsletter versendet wird.
 
-| *E-Mail-Adresse*
-|E-Mail-Adresse(n) eingeben. Mehrere E-Mail-Adressen kommagetrennt und ohne Leerzeichen eingeben.
+2+| Möchtest du bei Eingang einer neuen Bestellung eine E-Mail erhalten?
+
+|*E-Mails bei neuer Bestellung erhalten* (material:toggle_off[role=darkGrey])
+|Wenn du keine E-Mail beim Eingang einer neuen Bestellung erhalten möchtest, aktiviere die Schaltfläche _nicht_ (material:toggle_off[role=darkGrey]).
+
+|*E-Mails bei neuer Bestellung erhalten* (material:toggle_on[role=skyBlue])
+|Wenn du eine E-Mail beim Eingang einer neuen Bestellung erhalten möchtest, aktiviere die Schaltfläche (material:toggle_on[role=skyBlue]). Gib im Feld, das unterhalb erscheint, die E-Mail-Adresse(n) ein. Gib mehrere E-Mail-Adressen kommagetrennt und ohne Leerzeichen ein.
+
 |====
+--
 
 [#800]
 == HTML-Design verwenden
@@ -383,7 +380,7 @@ Aktuell mögliche Anhänge: Korrekturbeleg, Lieferschein, Mahnung, Nachbestellun
 Alle E-Mail-Vorlagen können mit bis zu 2 Anhängen standardisiert an Kund:innen versendet werden: PDF-Dokumente aus dem Bereich Fulfillment (z.B. Rechnungen) oder andere Dateien (z.B. ein Artikelprospekt oder eine Anleitung). Für die Vorlage *Eingangsbestätigung Webshop Bestellung* wären z.B. die Widerrufsbelehrung und die AGB im PDF-Format eine sinnvolle Ergänzung.
 
 | *Antwort an*
-|E-Mail-Adresse eingeben, an die die Antworten auf diese E-Mail-Vorlage gesendet werden sollen. Wenn keine E-Mail-Adresse eingegeben ist, werden Antworten auf diese Vorlage standardmäßig an die im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Zugangsdaten* gespeicherte E-Mail-Adresse versendet. Beispielsweise ist es sinnvoll, die E-Mail-Adresse der Buchhaltungsabteilung für die E-Mail-Vorlage *PDF-Rechnung* einzugeben. So gehen z.B. Rückfragen zur Rechnung direkt an die Buchhaltungsabteilung und müssen nicht erst weitergeleitet werden.
+|E-Mail-Adresse eingeben, an die die Antworten auf diese E-Mail-Vorlage gesendet werden sollen. Wenn keine E-Mail-Adresse eingegeben ist, werden Antworten auf diese Vorlage standardmäßig an die im Assistenten *E-Mail-Konten* im Schritt *Zugangsdaten*  gespeicherte E-Mail-Adresse versendet. Beispielsweise ist es sinnvoll, die E-Mail-Adresse der Buchhaltungsabteilung für die E-Mail-Vorlage *PDF-Rechnung* einzugeben. So gehen z.B. Rückfragen zur Rechnung direkt an die Buchhaltungsabteilung und müssen nicht erst weitergeleitet werden.
 
 | *Design verwenden*
 |Aktivieren, wenn der Inhalt der E-Mail mit dem im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » HTML-Design* gespeicherten Design versendet werden soll. Wird die Option nicht aktiviert, wird nur der Inhalt der E-Mail-Vorlage verwendet.
@@ -1226,11 +1223,11 @@ Die ID wird vom System vergeben und kann nicht geändert werden. Die ID ist im M
 
 | `$SignatureText`
 |Signatur im reinen Textformat. +
-Der Text wird im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur* gespeichert.
+Die Signatur wird im Assistenten *E-Mail-Konten* im Schritt *Signatur* gespeichert. Du findest den Assistenten im Menü *Einrichtung » Assistenten » Grundeinrichtung*.
 
 | `$SignatureHTML`
 |Signatur im HTML-Format. +
-Der Text wird im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur* gespeichert.
+Die Signatur wird im Assistenten *E-Mail-Konten* im Schritt *Signatur* gespeichert. Du findest den Assistenten im Menü *Einrichtung » Assistenten » Grundeinrichtung*.
 
 | `$RebateAmount`
 |Rabattbetrag
