--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -51,7 +51,7 @@ include::_includes:partial$rights.adoc[]
 Im Assistenten *E-Mail-Konten* im Menü *Einrichtung » Assistenten » Grundeinrichtung* speicherst du die Zugangsdaten des E-Mail-Postfachs, aus dem du E-Mails versenden möchtest, damit dein plentymarkets System E-Mails wie Auftragsbestätigungen und Versandbestätigungen von dieser E-Mail-Adresse versenden kann.
 
 [.collapseBox]
-.Einstellungen im Assistenten *E-Mail-Konten*
+.Einstellungen im Assistenten *E-Mail-Konten* im Schritt *Zugangsdaten*
 --
 [[table-email-server-login-details]]
 .E-Mail-Server-Zugangsdaten im Assistenten *E-Mail-Konten* speichern
@@ -107,8 +107,6 @@ Während der Einrichtung ist der Live-Modus deaktiviert. Das heißt, ausgehende 
 --
 
 //// 
-TODO: prüfen, ob diese Box hier bleiben soll
-
 [TIP]
 .Newsletter-Zugangsdaten eingeben
 ====
@@ -124,18 +122,45 @@ Im Assistenten *E-Mail-Konten* im Menü *Einrichtung » Assistenten » Grundeinr
 [IMPORTANT]
 .Priorität der Signatur beachten
 ====
-Die im Benutzerkonto im Menü *Einrichtung » Einstellungen » Benutzer » Konten* eingegebene Signatur hat Priorität gegenüber der Signatur, die im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur* gespeichert ist. +
-*_Das bedeutet:_* Wenn du z.B. die Variable `Signatur im HTML-Format` in die Vorlage einfügst, wird die Signatur aus dem Benutzer:innenkonto übernommen. Wenn keine Signatur im Benutzer:innenkonto gespeichert ist, wird die Signatur, die im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur* gespeichert ist, übernommen.
+Die im Benutzer:innenkonto im Menü *Einrichtung » Einstellungen » Benutzer » Konten* eingegebene Signatur hat Priorität gegenüber der Signatur, die im Assistenten *E-Mail-Konten* im Schritt *Signatur* gespeichert ist. +
+*_Das bedeutet:_* Wenn du z.B. die Variable `Signatur im HTML-Format` oder `Signatur im reinen Textformat` in die E-Mail-Vorlage einfügst, wird die Signatur aus dem Benutzer:innenkonto übernommen. Wenn keine Signatur im Benutzer:innenkonto gespeichert ist, wird die Signatur, die im Assistenten *E-Mail-Konten* im Schritt *Signatur* gespeichert ist, übernommen.
 ====
-
-// TODO: Prüfen -> Wenn du die Variable `Signatur im reinen Textformat` in die E-Mail-Vorlage einfügst, wird immer die Signatur, die du im Assistenten gespeichert ist, übernommen.
 
 [#e-mail-infodienst]
 === E-Mail-Infodienst einrichten
 
-Du kannst im Assistenten *E-Mail-Konten* im Menü *Einrichtung » Assistenten » Grundeinrichtung* einstellen, dass alle von deinem plentymarkets System ausgehenden E-Mails auf eine von dir gewählte E-Mail-Adresse als blinde Kopie (BCC) versendet werden. Besonders in der Anfangsphase deines Webshops erhältst du so eine gute Kontrolle über alle versendeten E-Mails und kannst erkennen, wo du Prozesse noch optimieren musst. Du kannst in diesem Menü auch einstellen, dass du bei Bestellungen automatisch eine Info-E-Mail erhältst.
+Du kannst im Assistenten *E-Mail-Konten* im Menü *Einrichtung » Assistenten » Grundeinrichtung* einstellen, dass alle von deinem plentymarkets System ausgehenden E-Mails auf eine von dir gewählte E-Mail-Adresse als Blindkopie versendet werden. Besonders in der Anfangsphase deines Webshops erhältst du so eine gute Kontrolle über alle versendeten E-Mails und kannst erkennen, wo du Prozesse noch optimieren musst. Du kannst hier auch einstellen, dass du bei Bestellungen automatisch eine Info-E-Mail erhältst.
 
-// TODO: hier auch die einzelnen Optionen aus dem Assistenten in einer Tabelle innerhalb einer collapseBox aufführen.
+[.collapseBox]
+.Einstellungen im Assistenten *E-Mail-Konten* im Schritt *Infodienst*
+--
+[[table-info-service]]
+.E-Mail-Server-Zugangsdaten im Assistenten *E-Mail-Konten* speichern
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+2+| Möchtest du eine Blindkopie von allen von deinem plentymarkets System ausgehenden E-Mails erhalten?
+
+|*E-Mails als Blindkopie erhalten* (material:toggle_off[role=darkGrey])
+|Wenn du keine Blindkopie erhalten möchtest, aktiviere die Schaltfläche _nicht_ (material:toggle_off[role=darkGrey]).
+
+|*E-Mails als Blindkopie erhalten* (material:toggle_on[role=skyBlue])
+|Wenn du eine Blindkopie erhalten möchtest, aktiviere die Schaltfläche (material:toggle_on[role=skyBlue]). Gib im Feld, das unterhalb erscheint, die E-Mail-Adresse(n) ein. Gib mehrere E-Mail-Adressen kommagetrennt und ohne Leerzeichen ein.
+
+|*Newsletter als Blindkopie erhalten*
+|Wenn du den in plentymarkets integrierten xref:crm:newsletter-versenden.adoc#[Newsletter] verwendest, kannst du hier einstellen, ob du eine Blindkopie erhalten möchtest, wenn ein Newsletter versendet wird.
+
+2+| Möchtest du bei Eingang einer neuen Bestellung eine E-Mail erhalten?
+
+|*E-Mails bei neuer Bestellung erhalten* (material:toggle_off[role=darkGrey])
+|Wenn du keine E-Mail beim Eingang einer neuen Bestellung erhalten möchtest, aktiviere die Schaltfläche _nicht_ (material:toggle_off[role=darkGrey]).
+
+|*E-Mails bei neuer Bestellung erhalten* (material:toggle_on[role=skyBlue])
+|Wenn du eine E-Mail beim Eingang einer neuen Bestellung erhalten möchtest, aktiviere die Schaltfläche (material:toggle_on[role=skyBlue]). Gib im Feld, das unterhalb erscheint, die E-Mail-Adresse(n) ein. Gib mehrere E-Mail-Adressen kommagetrennt und ohne Leerzeichen ein.
+
+|====
+--
 
 [#ordner-verwalten]
 == Ordner verwalten
@@ -2301,11 +2326,11 @@ Alternativ findest du die gespeicherte IBAN im Menü *Einrichtung » Einstellung
 | `globals.legalInformation.privacyPolicy.plain`
 
 | `Signatur im HTML-Format`
-|Die Signatur wird im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur* im Bereich *HTML-Signatur* gespeichert.
+|Die Signatur wird im Assistenten *E-Mail-Konten* im Schritt *Signatur* gespeichert. Du findest den Assistenten im Menü *Einrichtung » Assistenten » Grundeinrichtung*.
 | `globals.account.signatureHTML`
 
 | `Signatur im reinen Textformat`
-|Die Signatur wird im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur* im Bereich *Reine Textsignatur* gespeichert.
+|Die Signatur wird im Assistenten *E-Mail-Konten* im Schritt *Signatur* gespeichert. Du findest den Assistenten im Menü *Einrichtung » Assistenten » Grundeinrichtung*.
 | `globals.account.signatureText`
 
 | `Heutiges Datum`
