--- a/docs/de-de/modules/willkommen/pages/schnelleinstieg-basiseinstellungen.adoc
+++ b/docs/de-de/modules/willkommen/pages/schnelleinstieg-basiseinstellungen.adoc
@@ -218,7 +218,7 @@ E-Mail-Vorlage anpassen:
 
 | *Antwort an*
 |E-Mail-Adresse eingeben, an die die Antworten auf diese E-Mail-Vorlage gesendet werden sollen. +
-*_Hinweis:_* Wenn keine E-Mail-Adresse eingegeben wird, werden Antworten auf diese E-Mail-Vorlage an die E-Mail-Adresse, die im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Zugangsdaten* gespeichert ist, versendet.
+*_Hinweis:_* Wenn keine E-Mail-Adresse eingegeben wird, werden Antworten auf diese E-Mail-Vorlage an die E-Mail-Adresse, die im Assistenten *E-Mail-Konten* im Schritt *Zugangsdaten* gespeichert ist, versendet.
 
 | *Design verwenden*
 |Diese Option musst du nur aktivieren, wenn du ein HTML-Design mit der E-Mail-Vorlage verknüpfen möchtest. Weil wir im Schnelleinstieg reinen Text und keinen HTML-formatierten Text verwenden, ist diese Einstellung nicht relevant.
