--- a/docs/de-de/modules/pos/pages/pos-einrichten.adoc
+++ b/docs/de-de/modules/pos/pages/pos-einrichten.adoc
@@ -262,7 +262,7 @@ Gehe wie unten beschrieben vor, um Varianten als Favoriten zu speichern.
 [.instruction]
 Varianten als Favoriten speichern:
 
-. Öffne das Menü *Einrichtung » POS » Mandant » [Mandant wählen\] » [POS wählen\]*.
+. Öffne das Menü *Einrichtung » POS » [Mandant wählen\]*.
 . Öffne die Kasse.
 . Wechsele in das Tab *Favoriten*.
 . Öffne das Tab *Variante hinzufügen*. +
