--- a/docs/en-gb/modules/pos/pages/integrating-plentymarkets-pos.adoc
+++ b/docs/en-gb/modules/pos/pages/integrating-plentymarkets-pos.adoc
@@ -1721,7 +1721,7 @@ Creating coupon item for refunds:
 [.instruction]
 Linking coupon item for refunds with POS:
 
-. Go to *Setup » POS » [Select client]*.
+. Go to *Setup » POS » [Select client\]*.
 . Open the POS. +
 → The *Basic settings* tab opens.
 . Activate the option *Refund customer with gift card*. +
