--- a/docs/en-gb/modules/pos/pages/integrating-plentymarkets-pos.adoc
+++ b/docs/en-gb/modules/pos/pages/integrating-plentymarkets-pos.adoc
@@ -2264,7 +2264,7 @@ To take a POS with location in Austria out of commission, you need to create an 
 [.instruction]
 Deleting a POS:
 
-. Go to *Setup » POS » [Select client]*.
+. Go to *Setup » POS » [Select client\]*.
 . Click on the POS. +
 → The *Basic settings* tab of the POS opens.
 . In the top left corner, click *Delete*. +
