--- a/docs/en-gb/modules/pos/pages/pos-legal-compliance.adoc
+++ b/docs/en-gb/modules/pos/pages/pos-legal-compliance.adoc
@@ -448,7 +448,7 @@ Signature card (documents relating to the signature card): +
 
 POS (*Setup » POS » [Select client] » Open POS » Tab: Basic settings*): +
 
-* The POS identification number of the plentyPOS. Go to **Setup » POS » [Select client] » Open POS » Tab: Basic settings** to find the **POS identification number**.
+* The POS identification number of the plentyPOS. Go to *Setup » POS » [Select client] » Open POS » Tab: Basic settings* to find the *POS identification number*.
 * Go to the **Setup » POS » [Select client] » Open POS » Tab: Basic settings** to find the **User key AES-256**.
 
 |5\.
