add screenshot with old id in template name

--- a/docs/en-gb/modules/crm/pages/practical-example-migration-templates.adoc
+++ b/docs/en-gb/modules/crm/pages/practical-example-migration-templates.adoc
@@ -55,6 +55,10 @@ image::crm:practical-example-migration-folder-old-templates.png[width=640, heigh
 
 During the migration, we put the ID of the old template in brackets behind the name of the new template. The quickest way to find your “old” templates that you created in the *Setup » Client » [Select client] » Email » Templates* menu is to enter the ID in the *Name* field of the search. 
 
+[[image-example-old-id]]
+.Example of a migrated template with the name (Old ID: 4)
+image::crm:practical-example-old-id.png[width=640, height=360]
+
 [#check-list]
 == Check list
 
