ADD deprecated tag

--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -137,7 +137,7 @@
 ** xref:auftraege:auftragsherkunft.adoc[Auftragsherkunft]
 ** xref:auftraege:abonnement.adoc[Abonnement]
 ** xref:auftraege:gutscheine.adoc[Gutscheine]
-** xref:auftraege:dokumentenarchiv.adoc[Dokumentenarchiv]
+** xref:auftraege:dokumentenarchiv.adoc[Dokumentenarchiv (altes Tool)]
 ** xref:auftraege:new-order-ui-beta.adoc[Aufträge (beta)]
 *** xref:auftraege:preparatory-settings.adoc[Vorbereitende Einstellungen vornehmen]
 *** xref:auftraege:order-search.adoc[Aufträge suchen]
