--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -135,7 +135,7 @@
 ** xref:orders:order-referrer.adoc[Order referrer]
 ** xref:orders:subscription.adoc[Subscription]
 ** xref:orders:coupons.adoc[Coupons]
-** xref:orders:document-archive.adoc[Document archive]
+** xref:orders:document-archive.adoc[Document archive (old tool)]
 ** xref:orders:new-order-ui-beta.adoc[Orders (beta)]
 *** xref:orders:preparatory-settings.adoc[Preparatory settings]
 *** xref:orders:order-search.adoc[Searching for orders]
