Apply suggestions from code review
Co-authored-by: Alexandra Winzek <alexandra.winzek@plentymarkets.com>

--- a/docs/de-de/modules/pos/pages/pos-rechtssicherheit.adoc
+++ b/docs/de-de/modules/pos/pages/pos-rechtssicherheit.adoc
@@ -446,10 +446,10 @@ Signaturkarte (Unterlagen der Signaturkarte): +
 * Den Namen des Vertrauensdiensteanbieters, bei dem das Zertifikat erworben wurde
 * Die PIN des Signaturzertifikats
 
-Registrierkasse (*Einrichtung » POS » Mandant » [Mandant wählen\] » Kasse öffnen » Tab: Grundeinstellungen*): +
+Registrierkasse (*Einrichtung » POS » [Mandant wählen\] » Kasse öffnen » Tab: Grundeinstellungen*): +
 
-* Die Kassenidentifikationsnummer der plentyPOS Kasse. Die **Kassenidentifikationsnummer** findest du im Menü **Einrichtung » POS » Mandant » [Mandant wählen\] » Kasse öffnen » Tab: Grundeinstellungen**.
-* Den **Benutzerschlüssel AES-256**, der im Menü **Einrichtung » POS » Mandant » [Mandant wählen\] » Kasse öffnen » Tab: Grundeinstellungen** angezeigt wird.
+* Die Kassenidentifikationsnummer der plentyPOS Kasse. Die **Kassenidentifikationsnummer** findest du im Menü *Einrichtung » POS » [Mandant wählen\] » Kasse öffnen » Tab: Grundeinstellungen*.
+* Den *Benutzerschlüssel AES-256*, der im Menü *Einrichtung » POS » [Mandant wählen\] » Kasse öffnen » Tab: Grundeinstellungen* angezeigt wird.
 
 |5.
 |Startbeleg mit der BMF-Belegcheck-App scannen
