add new practical example to overview page

--- a/docs/en-gb/modules/crm/pages/practical-example-migration-templates.adoc
+++ b/docs/en-gb/modules/crm/pages/practical-example-migration-templates.adoc
@@ -11,7 +11,7 @@ With the release of the new EmailBuilder version on 7th September2022 in all bet
 ====
 * beta systems: 07-Sep-2022 
 * early systems: 14-Sep-2022
-* stable systems: 21-09-2022
+* stable systems: 21-Sep-2022
 ====
 
 [#what-to-check]
