--- a/docs/en-gb/modules/crm/pages/practical-examples.adoc
+++ b/docs/en-gb/modules/crm/pages/practical-examples.adoc
@@ -6,3 +6,5 @@
 In this area, you can find practical examples for the CRM area. The list of practical examples is continuously being updated:
 
 * xref:crm:practical-example-send-tracking-url.adoc#[Sending tracking URLs to customers]
+
+* xref:crm:practical-example-migration-templates.adoc#[EmailBuilder: Todo after the migration of the old email templates]
