New group function added

--- a/docs/de-de/modules/fulfillment/pages/paketinhaltsliste-testphase.adoc
+++ b/docs/de-de/modules/fulfillment/pages/paketinhaltsliste-testphase.adoc
@@ -449,7 +449,8 @@ Artikel verpacken:
 [TIP]
 .Verpackte Artikel aus Paket entfernen
 ======
-Möchtest du Artikel aus einem Paket wieder entfernen, setze neben den Artikeln im Bereich *Verpackte Artikel* ein Häkchen (material:check_box[role=skyBlue]) und klicke auf *Artikel aus dem Paket entfernen* (material:delete[]). Klicke anschließend auf material:delete[] *Entfernen*, um die Artikel aus dem Paket zu entfernen.
+Möchtest du Artikel aus einem Paket wieder entfernen, setze neben dem Artikel im Bereich *Verpackte Artikel* ein Häkchen (material:check_box[role=skyBlue]) und klicke auf *Artikel aus dem Paket entfernen* (material:delete[]). Klicke anschließend auf material:delete[] *Entfernen*, um den Artikel aus dem Paket zu entfernen. +
+Wenn du mehrere Artikel entfernen möchtest, nutze die Gruppenfunktion. Setze neben den Artikeln, die entfernt werden sollen, jeweils ein Häkchen und klicke dann oben auf *Gewählte Artikel aus dem aktuellen Paket entfernen* (material:delete[]).
 ======
 
 [#edit-items]
